#820 - better translation names for letters D and E, refs #820

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -82,7 +82,7 @@ un_mark.name=Neu-Markierung entfernen
 
 
 wizard.login_online_storage.connecting=Verbinde...
-dialog.updatecheck.downloadAndUpdateSilent=Update im Hintergrund
+dialog.update_check.downloadAndUpdateSilent=Update im Hintergrund
 general.reject=Ablehnen
 online_storage_change_account.name=Ändern
 online_storage_change_account.key=Ä
@@ -202,30 +202,30 @@ delete_confimation.busy.title=L\u00f6sche Datei(en)
 delete_confimation.text=Sind Sie sicher die folgenden Dateien zu l\u00f6schen?\:\n (Hinweis\: Die Dateien werden nicht in den Papierkorb verschoben).
 delete_confimation.text_delete=M\u00f6chten Sie die folgenden Dateien wirklich entg\u00fcltig l\u00f6schen?
 delete_confimation.text_delete_directory=M\u00f6chten Sie die folgenden Dateien und Unterverzeichnisse wirklich entg\u00fcltig l\u00f6schen?
-delete_confimation.text_movetorecyclebin=M\u00f6chten Sie die folgenden Dateien wirklich in den PowerFolder Papierkorb schieben?
-delete_confimation.text_movetorecyclebin_DIR=<VERZ>
-delete_confimation.text_movetorecyclebin_directory=M\u00f6chten Sie die folgenden Dateien wirklich in den PowerFolder Papierkorb schieben?
+delete_confimation.text_move_to_recycle_bin=M\u00f6chten Sie die folgenden Dateien wirklich in den PowerFolder Papierkorb schieben?
+delete_confimation.text_move_to_recycle_bin_DIR=<VERZ>
+delete_confimation.text_move_to_recycle_bin_directory=M\u00f6chten Sie die folgenden Dateien wirklich in den PowerFolder Papierkorb schieben?
 delete_confimation.title=Dateien l\u00f6schen?
 
-deletefile.description=L\u00f6scht die ausgew\u00e4hlten Dateien
-deletefile.key=L
-deletefile.name=Dateien l\u00f6schen
+delete_file.description=L\u00f6scht die ausgew\u00e4hlten Dateien
+delete_file.key=L
+delete_file.name=Dateien l\u00f6schen
 
-dialog.addmembertofriendlist.button.add=Als Freund hinzuf\u00fcgen
-dialog.addmembertofriendlist.explain=Sie k\u00f6nnen jederzeit Benutzer von der Freundesliste\nhinzuf\u00fcgen oder entfernen.
-dialog.addmembertofriendlist.messageTitle=Nachricht von {0}
-dialog.addmembertofriendlist.question={0} ist einem oder mehreren PowerFolder beigetreten\:\n\n{1}\nBenutzer jetzt den Freunden hinzuf\u00fcgen?
-dialog.addmembertofriendlist.question2={0} hat Sie als Freund hinzugef\u00fcgt.\n\nBenutzer jetzt den Freunden hinzuf\u00fcgen?
-dialog.addmembertofriendlist.title={0} zur Freundesliste
-dialog.alreadyrunning.exitbutton=Ende
-dialog.alreadyrunning.startbutton=Trotzdem starten
-dialog.alreadyrunning.title=L\u00e4uft bereits
-dialog.alreadyrunning.warning=PowerFolder l\u00e4uft bereits
-dialog.binderror=Der Netzwerk Port ist bereits belegt
-dialog.binderror.option.exit=Beenden
-dialog.binderror.option.ignore=Weiter
-dialog.binderror.option.text=Kann die benötigten Netzwerk Ports nicht belegen\!\nEin Port ist nötig um eingehende\nVerbindungen zu ermöglichen.
-dialog.binderror.option.title=Netzwerk Port Fehler\!
+dialog.add_member_to_friend_list.button.add=Als Freund hinzuf\u00fcgen
+dialog.add_member_to_friend_list.explain=Sie k\u00f6nnen jederzeit Benutzer von der Freundesliste\nhinzuf\u00fcgen oder entfernen.
+dialog.add_member_to_friend_list.messageTitle=Nachricht von {0}
+dialog.add_member_to_friend_list.question={0} ist einem oder mehreren PowerFolder beigetreten\:\n\n{1}\nBenutzer jetzt den Freunden hinzuf\u00fcgen?
+dialog.add_member_to_friend_list.question2={0} hat Sie als Freund hinzugef\u00fcgt.\n\nBenutzer jetzt den Freunden hinzuf\u00fcgen?
+dialog.add_member_to_friend_list.title={0} zur Freundesliste
+dialog.already_running.exit_button=Ende
+dialog.already_running.start_button=Trotzdem starten
+dialog.already_running.title=L\u00e4uft bereits
+dialog.already_running.warning=PowerFolder l\u00e4uft bereits
+dialog.bind_error=Der Netzwerk Port ist bereits belegt
+dialog.bind_error.option.exit=Beenden
+dialog.bind_error.option.ignore=Weiter
+dialog.bind_error.option.text=Kann die benötigten Netzwerk Ports nicht belegen\!\nEin Port ist nötig um eingehende\nVerbindungen zu ermöglichen.
+dialog.bind_error.option.title=Netzwerk Port Fehler\!
 dialog.connect.connecting=Verbinde
 dialog.connect.connecting_to=Verbinde zu {0}...
 dialog.connection_problem=Verbindungsproblem
@@ -258,16 +258,16 @@ dialog.create_edit_profile.title_edit=Eigenen Transfer Modus bearbeiten
 dialog.create_edit_profile.weekdays=An Wochentagen
 dialog.create_edit_profile.weekends=Am Wochenende
 dialog.delete_profile.title=Eigenen Transfer Modus löschen
-dialog.directorychooser.new.description=Neues Verzeichnis
-dialog.directorychooser.new.exists={0}\nexistiert bereits
-dialog.directorychooser.new.key=N
-dialog.directorychooser.new.name=Neu
-dialog.directorychooser.new.problem=Problem w\u00e4hrend des Erstellens\:\n{0}
-dialog.directorychooser.text=Bitte w\u00e4hlen Sie ein Verzeichnis und klicken Sie 'OK'.\nVerzeichnisse k\u00f6nnen mit '+' aufgeklappt werden.
-dialog.directorychooser.title=Verzeichnis ausw\u00e4hlen
-dialog.fatalerror.title=Schwerer Fehler
-dialog.newdirectorycreator.text=Bitte geben Sie den Namen des Unterverzeichnis an\n{0}
-dialog.newdirectorycreator.title=Neues Verzeichnis
+dialog.directory_chooser.new.description=Neues Verzeichnis
+dialog.directory_chooser.new.exists={0}\nexistiert bereits
+dialog.directory_chooser.new.key=N
+dialog.directory_chooser.new.name=Neu
+dialog.directory_chooser.new.problem=Problem w\u00e4hrend des Erstellens\:\n{0}
+dialog.directory_chooser.text=Bitte w\u00e4hlen Sie ein Verzeichnis und klicken Sie 'OK'.\nVerzeichnisse k\u00f6nnen mit '+' aufgeklappt werden.
+dialog.directory_chooser.title=Verzeichnis ausw\u00e4hlen
+dialog.fatal_error.title=Schwerer Fehler
+dialog.new_directory_creator.text=Bitte geben Sie den Namen des Unterverzeichnis an\n{0}
+dialog.new_directory_creator.title=Neues Verzeichnis
 dialog.synchronization.choose=Wie m\u00f6chten Sie jetzt synchronisieren?
 dialog.synchronization.duplicate.delete=Löschen diese Transfer Modus betrifft folgende PowerFolder.
 dialog.synchronization.duplicate.edit=Änderungen an diesem Transfer Modus betrifft folgende PowerFolder.
@@ -281,34 +281,34 @@ dialog.synchronization.title=Manuelle Synchronisation
 dialog.unable_to_connect_to_address=Kann nicht zu {0} verbinden
 dialog.unable_to_connect_to_member=Kann nicht zu {0} verbinden
 dialog.unable_to_open_port=Kann Netzwerk Port {0} nicht \u00f6ffnen, PowerFolder k\u00f6nnte bereits laufen
-dialog.updatecheck.developmentversion.optionrestart=Neustart
-dialog.updatecheck.downloadAndUpdate=Jetzt herunterladen und aktualisieren
-dialog.updatecheck.failed.text=Update fehlgeschlagen. Bitte \u00fcberpr\u00fcfen Sie Ihre Internetverbindung.\n \nPowerFolder Pro\: Bitte \u00fcberpr\u00fcfen Sie auch die Benutzerdaten Ihres Update-Service Accounts unter\nEinstellungen/Pro Einstellungen/PowerFolder Pro Loader.
-dialog.updatecheck.failed.title=Update fehlgeschlagen
-dialog.updatecheck.gotoHomepage=Zur PowerFolder Homepage
-dialog.updatecheck.noUpdateAvailable=Diese Version ist aktuell
-dialog.updatecheck.nothingNeverAsk=Nicht mehr erinnern
-dialog.updatecheck.text=Eine neue Version von PowerFolder ist verf\u00fcgbar \n\nIhre version\: v{0}\nAktuellste version\: v{1} (neuer)\n
-dialog.updatecheck.title=Update verf\u00fcgbar
+dialog.update_check.development_version.option_restart=Neustart
+dialog.update_check.downloadAndUpdate=Jetzt herunterladen und aktualisieren
+dialog.update_check.failed.text=Update fehlgeschlagen. Bitte \u00fcberpr\u00fcfen Sie Ihre Internetverbindung.\n \nPowerFolder Pro\: Bitte \u00fcberpr\u00fcfen Sie auch die Benutzerdaten Ihres Update-Service Accounts unter\nEinstellungen/Pro Einstellungen/PowerFolder Pro Loader.
+dialog.update_check.failed.title=Update fehlgeschlagen
+dialog.update_check.gotoHomepage=Zur PowerFolder Homepage
+dialog.update_check.noUpdateAvailable=Diese Version ist aktuell
+dialog.update_check.nothingNeverAsk=Nicht mehr erinnern
+dialog.update_check.text=Eine neue Version von PowerFolder ist verf\u00fcgbar \n\nIhre version\: v{0}\nAktuellste version\: v{1} (neuer)\n
+dialog.update_check.title=Update verf\u00fcgbar
 dialog.user_select.online_only=
 dialog.user_select.text=W\u00e4hlen Sie die Benutzer aus. Strg halten f\u00fcr mehrfache Auswahl.
 dialog.user_select.title=Benutzer ausw\u00e4hlen
 
-disablesilentmode.description=Ruhemodus derzeitig aktiv. Hinzugef\u00fcgte/ver\u00e4nderte Dateien werden nicht erkannt. Bitte anklicken, um wieder in den aktiven Modus zu wechseln.
-disablesilentmode.key=w
-disablesilentmode.name=Zum Aktivmodus
+disable_silent_mode.description=Ruhemodus derzeitig aktiv. Hinzugef\u00fcgte/ver\u00e4nderte Dateien werden nicht erkannt. Bitte anklicken, um wieder in den aktiven Modus zu wechseln.
+disable_silent_mode.key=w
+disable_silent_mode.name=Zum Aktivmodus
 
 download_panel.auto_cleanup.description=Entfernt fertige Downloads automatisch
 download_panel.auto_cleanup.name=Auto-Aufr\u00e4umen
 
-downloadfile.description=Markierte Dateien herunterladen
-downloadfile.failed.sourcenotfound=Kann {0} nicht herunterladen, keine Quellen gefunden
-downloadfile.key=H
-downloadfile.name=Herunterladen
-downloadfile.unable_to_download=Kann nicht herunterladen
+download_file.description=Markierte Dateien herunterladen
+download_file.failed.source_not_found=Kann {0} nicht herunterladen, keine Quellen gefunden
+download_file.key=H
+download_file.name=Herunterladen
+download_file.unable_to_download=Kann nicht herunterladen
 
-downloads_panel.cleanup_activity.description=Räume Downloads auf
-downloads_panel.cleanup_activity.title=Räume auf
+downloads_panel.clean_up_activity.description=Räume Downloads auf
+downloads_panel.clean_up_activity.title=Räume auf
 
 empty_recycle_bin.description=PowerFolder Papierkorb leeren
 empty_recycle_bin.key=L
@@ -321,9 +321,9 @@ empty_recycle_bin_confimation.empty=Leeren
 empty_recycle_bin_confimation.text=Der PowerFolder Papierkorb wird geleert.
 empty_recycle_bin_confimation.title=PowerFolder Papierkorb leeren
 
-enablesilentmode.description=Deaktiviert alle aufwendigen Aufgaben, z.B. die Suche nach \u00c4nderungen in den Foldern.
-enablesilentmode.key=s
-enablesilentmode.name=Zum Ruhemodus
+enable_silent_mode.description=Deaktiviert alle aufwendigen Aufgaben, z.B. die Suche nach \u00c4nderungen in den Foldern.
+enable_silent_mode.key=s
+enable_silent_mode.name=Zum Ruhemodus
 
 estimation.unknown=unbekannt
 
