--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -133,30 +133,30 @@ delete_confimation.busy.title=Borrando archivo(s)
 delete_confimation.text=\u07D3eguro que desea borrar los siguientes archivos\:\n (Note que son realmente borrados de su sistema, no son movidos a la "Papelera de Reciclaje").
 delete_confimation.text_delete=\u00BFEstas seguro deseas borrar los siguientes archivos de manera permanente?
 delete_confimation.text_delete_directory=\u0085stas seguro deseas borrar lo siguientes archivos de manera permanente (incluyendo subdirectories con archivos)?
-delete_confimation.text_movetorecyclebin=\u07D3eguro que desea mover los siguientes archivos(s) a la Papelera de Reciclaje de PowerFolder?
-delete_confimation.text_movetorecyclebin_DIR=<CARPETA>
-delete_confimation.text_movetorecyclebin_directory=?Estas seguro deseas mover los siguientes archivos y/o directorios (inluyendo subdirectorios con archivos) a la Papelera de Reciclaje de PowerFolder??
+delete_confimation.text_move_to_recycle_bin=\u07D3eguro que desea mover los siguientes archivos(s) a la Papelera de Reciclaje de PowerFolder?
+delete_confimation.text_move_to_recycle_bin_DIR=<CARPETA>
+delete_confimation.text_move_to_recycle_bin_directory=?Estas seguro deseas mover los siguientes archivos y/o directorios (inluyendo subdirectorios con archivos) a la Papelera de Reciclaje de PowerFolder??
 delete_confimation.title=\u07C2orrar Archivos?
 
-deletefile.description=Elimina el(los) archivo(s) seleccionado(s)
-deletefile.key=F
-deletefile.name=Eliminar archivos(s)
+delete_file.description=Elimina el(los) archivo(s) seleccionado(s)
+delete_file.key=F
+delete_file.name=Eliminar archivos(s)
 
-dialog.addmembertofriendlist.button.add=A\u00F1adir a amigos
-dialog.addmembertofriendlist.explain=Puedes de manera sencilla cambiar la condici\u00F3n\nde un amigo usando los menus en contexto(bot\u00F3n derecho en el rat\u00F3n).
-dialog.addmembertofriendlist.messageTitle=Mensaje de {0}
-dialog.addmembertofriendlist.question={0} es miembre de uno o mas PowerFolders\:\n\n{1}\nSi deseas puedes incluirlo en tu lista de amigos.
-dialog.addmembertofriendlist.question2={0} te ha a\u00F1adido a su lista de amigos..\n\nSi deseas pudes incluirlo en tu lista de amigos.
-dialog.addmembertofriendlist.title=A\u00F1adir {0} a la lista de amigos
-dialog.alreadyrunning.exitbutton=Salir
-dialog.alreadyrunning.startbutton=Iniciar de todas maneras
-dialog.alreadyrunning.title=Ya funcionando
-dialog.alreadyrunning.warning=PowerFolder ya esta en funcionamiento\n\nConsejo\: Si reinici\u00F3 PowerFolder, \nelimine todos los procesos javaw/java e intentelo de nuevo
-dialog.binderror=No pude atar el puerto\!
-dialog.binderror.option.exit=Salir de PowerFolder
-dialog.binderror.option.ignore=Continuar
-dialog.binderror.option.text=No pude atar al puert(s) espec\u00EDfico\!\nUn puerto de liga es requisito para que PowerFolder\npueda crear nuevas conecciones..
-dialog.binderror.option.title=Error de puerto liga\!
+dialog.add_member_to_friend_list.button.add=A\u00F1adir a amigos
+dialog.add_member_to_friend_list.explain=Puedes de manera sencilla cambiar la condici\u00F3n\nde un amigo usando los menus en contexto(bot\u00F3n derecho en el rat\u00F3n).
+dialog.add_member_to_friend_list.messageTitle=Mensaje de {0}
+dialog.add_member_to_friend_list.question={0} es miembre de uno o mas PowerFolders\:\n\n{1}\nSi deseas puedes incluirlo en tu lista de amigos.
+dialog.add_member_to_friend_list.question2={0} te ha a\u00F1adido a su lista de amigos..\n\nSi deseas pudes incluirlo en tu lista de amigos.
+dialog.add_member_to_friend_list.title=A\u00F1adir {0} a la lista de amigos
+dialog.already_running.exit_button=Salir
+dialog.already_running.start_button=Iniciar de todas maneras
+dialog.already_running.title=Ya funcionando
+dialog.already_running.warning=PowerFolder ya esta en funcionamiento\n\nConsejo\: Si reinici\u00F3 PowerFolder, \nelimine todos los procesos javaw/java e intentelo de nuevo
+dialog.bind_error=No pude atar el puerto\!
+dialog.bind_error.option.exit=Salir de PowerFolder
+dialog.bind_error.option.ignore=Continuar
+dialog.bind_error.option.text=No pude atar al puert(s) espec\u00EDfico\!\nUn puerto de liga es requisito para que PowerFolder\npueda crear nuevas conecciones..
+dialog.bind_error.option.title=Error de puerto liga\!
 dialog.connect.connecting=Conectando
 dialog.connect.connecting_to=Conectando a {0}...
 dialog.connection_problem=Problema de conexi\u00F3n
@@ -189,16 +189,16 @@ dialog.create_edit_profile.title_edit=Editar modo de transferencia personalizado
 dialog.create_edit_profile.weekdays=Entre semana
 dialog.create_edit_profile.weekends=Fines de semana
 dialog.delete_profile.title=Borrar modo de transferencia personalizado
-dialog.directorychooser.new.description=Directorio nuevo
-dialog.directorychooser.new.exists={0}\nya existe
-dialog.directorychooser.new.key=N
-dialog.directorychooser.new.name=Nuevo
-dialog.directorychooser.new.problem=Hubo problemas en la creaci\u00F3n de\n{0}
-dialog.directorychooser.text=Seleccione un directorio de la lista adjunta, haga click al \u00F3K'.\nUd puede expander las carpetas seleccionando las anclas
-dialog.directorychooser.title=Seleccione un directorio
-dialog.fatalerror.title=Error Fatal
-dialog.newdirectorycreator.text=Teclear el nombre del subdirecotrio nuevo de {0}\n{0}
-dialog.newdirectorycreator.title=Directorio nuevo
+dialog.directory_chooser.new.description=Directorio nuevo
+dialog.directory_chooser.new.exists={0}\nya existe
+dialog.directory_chooser.new.key=N
+dialog.directory_chooser.new.name=Nuevo
+dialog.directory_chooser.new.problem=Hubo problemas en la creaci\u00F3n de\n{0}
+dialog.directory_chooser.text=Seleccione un directorio de la lista adjunta, haga click al \u00F3K'.\nUd puede expander las carpetas seleccionando las anclas
+dialog.directory_chooser.title=Seleccione un directorio
+dialog.fatal_error.title=Error Fatal
+dialog.new_directory_creator.text=Teclear el nombre del subdirecotrio nuevo de {0}\n{0}
+dialog.new_directory_creator.title=Directorio nuevo
 dialog.synchronization.choose=Por favor, elija su acci\u00F3n en
 dialog.synchronization.duplicate.delete=Borrar este perfile afectar\u00E1 estas carpetas.
 dialog.synchronization.duplicate.edit=Editar este perfil afectara estas carpetas.
@@ -212,34 +212,34 @@ dialog.synchronization.title=Sincronizaci\u00F3n manual
 dialog.unable_to_connect_to_address=No se puede conectar a {0}
 dialog.unable_to_connect_to_member=No se puede conectar a {0}
 dialog.unable_to_open_port=No se puede abrir el puerto local {0}, quiz\u00E1s PowerFolder ya est\u00E9 en funcionamiento
-dialog.updatecheck.developmentversion.optionrestart=Reiniciar
-dialog.updatecheck.downloadAndUpdate=Descargar y actualizar ahora
-dialog.updatecheck.failed.text=Actualizaci\u00F3gn fracasada. Favor de inspeccinar la connecci\u00F3n de Internet.
-dialog.updatecheck.failed.title=Actualizaci\u00F3gn fracasada.
-dialog.updatecheck.gotoHomepage=Ir a la p\u00E1gina web de PowerFolder
-dialog.updatecheck.noUpdateAvailable=Esta versi\u00F3n se encuentra actualizada
-dialog.updatecheck.nothingNeverAsk=No hacer nada y no preguntar de nuevo
-dialog.updatecheck.text=Est\u00E1 disponible una nueva versi\u00F3n de PowerFolder            \n\nEsta versi\u00F3n\: v{0}\nUltima disponible\: v{1} (la m\u00E1s nueva)\n
-dialog.updatecheck.title=Nueva versi\u00F3n disponible
+dialog.update_check.development_version.option_restart=Reiniciar
+dialog.update_check.downloadAndUpdate=Descargar y actualizar ahora
+dialog.update_check.failed.text=Actualizaci\u00F3gn fracasada. Favor de inspeccinar la connecci\u00F3n de Internet.
+dialog.update_check.failed.title=Actualizaci\u00F3gn fracasada.
+dialog.update_check.gotoHomepage=Ir a la p\u00E1gina web de PowerFolder
+dialog.update_check.noUpdateAvailable=Esta versi\u00F3n se encuentra actualizada
+dialog.update_check.nothingNeverAsk=No hacer nada y no preguntar de nuevo
+dialog.update_check.text=Est\u00E1 disponible una nueva versi\u00F3n de PowerFolder            \n\nEsta versi\u00F3n\: v{0}\nUltima disponible\: v{1} (la m\u00E1s nueva)\n
+dialog.update_check.title=Nueva versi\u00F3n disponible
 dialog.user_select.online_only=solo en linea
 dialog.user_select.text=Seleccionar los usuarios que seran invitados.  Mantener la tecla Ctrl oprimida para seleccionar multiples usuarios.
 dialog.user_select.title=Seleccionar Usuarios
 
-disablesilentmode.description=Modo silencioso activo, no se detectar\u00E1 archivos nuevos o modificados. Pulse para cambiar a modo completo
-disablesilentmode.key=w
-disablesilentmode.name=\u00A1Despertar\!
+disable_silent_mode.description=Modo silencioso activo, no se detectar\u00E1 archivos nuevos o modificados. Pulse para cambiar a modo completo
+disable_silent_mode.key=w
+disable_silent_mode.name=\u00A1Despertar\!
 
 download_panel.auto_cleanup.description=Borrar records de las descargas completas
 download_panel.auto_cleanup.name=Auto-borradop
 
-downloadfile.description=Descarga el(los) archivo(s) seleccionado(s) (o archivos en el directorio). Los archivos eliminados se volveran a descargar
-downloadfile.failed.sourcenotfound=No se puede descargar el archivo {0}, no se encuentra la fuente
-downloadfile.key=D
-downloadfile.name=Descargar archivos(s)
-downloadfile.unable_to_download=No se puede descargar
+download_file.description=Descarga el(los) archivo(s) seleccionado(s) (o archivos en el directorio). Los archivos eliminados se volveran a descargar
+download_file.failed.source_not_found=No se puede descargar el archivo {0}, no se encuentra la fuente
+download_file.key=D
+download_file.name=Descargar archivos(s)
+download_file.unable_to_download=No se puede descargar
 
-downloads_panel.cleanup_activity.description=Limpiar descargas antiguas
-downloads_panel.cleanup_activity.title=Limpiando
+downloads_panel.clean_up_activity.description=Limpiar descargas antiguas
+downloads_panel.clean_up_activity.title=Limpiando
 
 empty_recycle_bin.description=Vaciar la Papelera de Reciclaje de PowerFolder
 empty_recycle_bin.key=E
@@ -252,9 +252,9 @@ empty_recycle_bin_confimation.empty=Vaciar
 empty_recycle_bin_confimation.text=El cesto de reciclaje de PowerFolder va ser vaciado.
 empty_recycle_bin_confimation.title=Vaciar Papelera de Reciclaje de PowerFolder
 
-enablesilentmode.description=Desactiva todo el trabajo pesado, p.e. buscar cambios en las carpetas. Cese de toda actividad en el disco
-enablesilentmode.key=s
-enablesilentmode.name=Modo silencioso
+enable_silent_mode.description=Desactiva todo el trabajo pesado, p.e. buscar cambios en las carpetas. Cese de toda actividad en el disco
+enable_silent_mode.key=s
+enable_silent_mode.name=Modo silencioso
 
 estimation.unknown=incierto
 
