--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -133,30 +133,30 @@ delete_confimation.busy.title=Effacer des fichiers
 delete_confimation.text=Etes-vous s\u00FBr de vouloir effacer le(s) fichier(s) suivants ? \:\n (Noter que ces fichiers seront r\u00E9ellement effac\u00E9s de votre ordinateur, et pas r\u00E9cup\u00E9rable depuis la "Poubelle").
 delete_confimation.text_delete=Etes-vous s\u00FBr de vouloir effacer d\u00E9finitivement le(s) fichier(s) suivants ??
 delete_confimation.text_delete_directory=Etes-vous s\u00FBr de vouloir effacer le dossier suivant (en incluant dossiers/r\u00E9pertoires et fichiers) ?
-delete_confimation.text_movetorecyclebin=Etes-vous s\u00FBr de vouloir d\u00E9placer le(s) fichier(s) suivant(s) dans la Poubelle PowerFolder ?
-delete_confimation.text_movetorecyclebin_DIR=<DIR>
-delete_confimation.text_movetorecyclebin_directory=Etes-vous s\u00FBr de vouloir d\u00E9placer le(s) fichier(s) suivants et/ou les r\u00E9pertoires (en incluant les sous r\u00E9pertoires et leurs fichiers) dans\nla Poubelle PowerFolder?
+delete_confimation.text_move_to_recycle_bin=Etes-vous s\u00FBr de vouloir d\u00E9placer le(s) fichier(s) suivant(s) dans la Poubelle PowerFolder ?
+delete_confimation.text_move_to_recycle_bin_DIR=<DIR>
+delete_confimation.text_move_to_recycle_bin_directory=Etes-vous s\u00FBr de vouloir d\u00E9placer le(s) fichier(s) suivants et/ou les r\u00E9pertoires (en incluant les sous r\u00E9pertoires et leurs fichiers) dans\nla Poubelle PowerFolder?
 delete_confimation.title=Effacer les fichiers ?
 
-deletefile.description=Effacer le(s) fichier(s) s\u00E9lectionn\u00E9(s)
-deletefile.key=E
-deletefile.name=Effacer le(s) fichier(s)
+delete_file.description=Effacer le(s) fichier(s) s\u00E9lectionn\u00E9(s)
+delete_file.key=E
+delete_file.name=Effacer le(s) fichier(s)
 
-dialog.addmembertofriendlist.button.add=Ajouter aux ami(e)s
-dialog.addmembertofriendlist.explain=Vous pouvez changer le statut de vos ami(e)s\nvia le menu contextuel (clic droit de la souris).
-dialog.addmembertofriendlist.messageTitle=Message de {0}
-dialog.addmembertofriendlist.question={0} rejoint un ou plus dossier PowerFolders\:\n\n{1}\nVous pouvez l'ajouter \u00E0 votre liste d'ami(e)s.
-dialog.addmembertofriendlist.question2={0} vous a ajout\u00E9 \u00E0 sa liste d'ami(e)s.\n\nVous pouvez l'ajouter \u00E0 votre liste d'ami(e)s.
-dialog.addmembertofriendlist.title=Ajouter {0} \u00E0 votre liste d'ami(e)s
-dialog.alreadyrunning.exitbutton=Quitter
-dialog.alreadyrunning.startbutton=D\u00E9marrer syst\u00A9matiquement
-dialog.alreadyrunning.title=D\u00E9j\u00E0 en cours d'ex\u00E9cution
-dialog.alreadyrunning.warning=PowerFolder fonctionne d\u00E9j\u00E0\n\nInfo\: Si vous red\u00E9marrez PowerFolder, \n arr\u00EAtez tous les processus javaw/java avant de relancer le programme
-dialog.binderror=Impossible d'identifier un port disponible\!
-dialog.binderror.option.exit=Quitter PowerFolder
-dialog.binderror.option.ignore=Continuer
-dialog.binderror.option.text=Impossible de joindre le(s) port(s) indiqu\u00E9(s)\!\nUn port est n\u00E9cessaire \u00E0 PowerFolder pour\nles connexions entrantes.
-dialog.binderror.option.title=Erreur de reconnaissance du port de communication\!
+dialog.add_member_to_friend_list.button.add=Ajouter aux ami(e)s
+dialog.add_member_to_friend_list.explain=Vous pouvez changer le statut de vos ami(e)s\nvia le menu contextuel (clic droit de la souris).
+dialog.add_member_to_friend_list.messageTitle=Message de {0}
+dialog.add_member_to_friend_list.question={0} rejoint un ou plus dossier PowerFolders\:\n\n{1}\nVous pouvez l'ajouter \u00E0 votre liste d'ami(e)s.
+dialog.add_member_to_friend_list.question2={0} vous a ajout\u00E9 \u00E0 sa liste d'ami(e)s.\n\nVous pouvez l'ajouter \u00E0 votre liste d'ami(e)s.
+dialog.add_member_to_friend_list.title=Ajouter {0} \u00E0 votre liste d'ami(e)s
+dialog.already_running.exit_button=Quitter
+dialog.already_running.start_button=D\u00E9marrer syst\u00A9matiquement
+dialog.already_running.title=D\u00E9j\u00E0 en cours d'ex\u00E9cution
+dialog.already_running.warning=PowerFolder fonctionne d\u00E9j\u00E0\n\nInfo\: Si vous red\u00E9marrez PowerFolder, \n arr\u00EAtez tous les processus javaw/java avant de relancer le programme
+dialog.bind_error=Impossible d'identifier un port disponible\!
+dialog.bind_error.option.exit=Quitter PowerFolder
+dialog.bind_error.option.ignore=Continuer
+dialog.bind_error.option.text=Impossible de joindre le(s) port(s) indiqu\u00E9(s)\!\nUn port est n\u00E9cessaire \u00E0 PowerFolder pour\nles connexions entrantes.
+dialog.bind_error.option.title=Erreur de reconnaissance du port de communication\!
 dialog.connect.connecting=Connexion en cours
 dialog.connect.connecting_to=Connexion \u00E0 {0}...
 dialog.connection_problem=Probl\u00E8me de connexion
@@ -191,16 +191,16 @@ dialog.create_edit_profile.title_edit=Editer un profil de transfert particulier
 dialog.create_edit_profile.weekdays=Jours de la semaine
 dialog.create_edit_profile.weekends=Week-end
 dialog.delete_profile.title=Supprimer un profile de transfert particulier
-dialog.directorychooser.new.description=Nouveau dossier
-dialog.directorychooser.new.exists={0}\n existe d\u00E9j\u00E0
-dialog.directorychooser.new.key=N
-dialog.directorychooser.new.name=Nouveau
-dialog.directorychooser.new.problem=Probl\u00E8me rencontr\u00E9 \u00E0 la cr\u00E9ation de \n{0}
-dialog.directorychooser.text=Choisir un dossier de la liste suivante, puis cliquer sur 'OK'.\nVous pouvez d\u00E9\u00E9velopper l'arborescence en cliquant sur la croix.
-dialog.directorychooser.title=Choisir le dossier
-dialog.fatalerror.title=Erreur Syst\u00E8me
-dialog.newdirectorycreator.text=Saisir le nom du nouveau sous-r\u00E9pertoire de \n{0}
-dialog.newdirectorycreator.title=Nouveau dossier
+dialog.directory_chooser.new.description=Nouveau dossier
+dialog.directory_chooser.new.exists={0}\n existe d\u00E9j\u00E0
+dialog.directory_chooser.new.key=N
+dialog.directory_chooser.new.name=Nouveau
+dialog.directory_chooser.new.problem=Probl\u00E8me rencontr\u00E9 \u00E0 la cr\u00E9ation de \n{0}
+dialog.directory_chooser.text=Choisir un dossier de la liste suivante, puis cliquer sur 'OK'.\nVous pouvez d\u00E9\u00E9velopper l'arborescence en cliquant sur la croix.
+dialog.directory_chooser.title=Choisir le dossier
+dialog.fatal_error.title=Erreur Syst\u00E8me
+dialog.new_directory_creator.text=Saisir le nom du nouveau sous-r\u00E9pertoire de \n{0}
+dialog.new_directory_creator.title=Nouveau dossier
 dialog.synchronization.choose=Merci de choisir l'action de synchronisation ad\u00E9quate
 dialog.synchronization.duplicate.delete=Supprimer ce profil affectera tous ses dossiers.
 dialog.synchronization.duplicate.edit=Editer ce profil affectera tous ses dossiers.
@@ -214,34 +214,34 @@ dialog.synchronization.title=Synchronisation manuelle
 dialog.unable_to_connect_to_address=Impossible de se connecter \u00E0 {0}
 dialog.unable_to_connect_to_member=Impossible de se connecter \u00E0 {0}
 dialog.unable_to_open_port=Impossible d'ouvrir localement le port {0}, v\u00E9rifiez si PowerFolder n'est pas d\u00E9j\u00E0 d\u00E9marr\u00E9
-dialog.updatecheck.developmentversion.optionrestart=Re-d\u00E9marrer
-dialog.updatecheck.downloadAndUpdate=T\u00E9l\u00E9charger et Mettre \u00E0 Jour maintenant
-dialog.updatecheck.failed.text=Mise \u00E0 jour erron\u00E9e. Please check your internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
-dialog.updatecheck.failed.title=Mise \u00E0 jour rat\u00E9e
-dialog.updatecheck.gotoHomepage=Aller sur la page d'accueil de PowerFolder
-dialog.updatecheck.noUpdateAvailable=Cette version est \u00E0 jour
-dialog.updatecheck.nothingNeverAsk=Ne rien faire et ne jamais me reposer la question
-dialog.updatecheck.text=Une nouvelle version de PowerFolder est disponible            \n\nVersion actuelle\: v{0}\nVersion disponible\: v{1} (plus r\u00E9cente)\n
-dialog.updatecheck.title=Nouvelle version disponible
+dialog.update_check.development_version.option_restart=Re-d\u00E9marrer
+dialog.update_check.downloadAndUpdate=T\u00E9l\u00E9charger et Mettre \u00E0 Jour maintenant
+dialog.update_check.failed.text=Mise \u00E0 jour erron\u00E9e. Please check your internet connection.\n \nPowerFolder Pro\: Please also check your Update-Service account under\nSettings/Pro Settings/PowerFolder Pro Loader.
+dialog.update_check.failed.title=Mise \u00E0 jour rat\u00E9e
+dialog.update_check.gotoHomepage=Aller sur la page d'accueil de PowerFolder
+dialog.update_check.noUpdateAvailable=Cette version est \u00E0 jour
+dialog.update_check.nothingNeverAsk=Ne rien faire et ne jamais me reposer la question
+dialog.update_check.text=Une nouvelle version de PowerFolder est disponible            \n\nVersion actuelle\: v{0}\nVersion disponible\: v{1} (plus r\u00E9cente)\n
+dialog.update_check.title=Nouvelle version disponible
 dialog.user_select.online_only=
 dialog.user_select.text=Choisir un utilisateur. Maintenair la touche Ctrl pour en choisir plusieurs.
 dialog.user_select.title=Choisir un utilisateur
 
-disablesilentmode.description=Mode silencieux activ\u00E9, les fichiers ajout\u00E9s/modifi\u00E9s ne seront pas trouv\u00E9s. Passer en mode Actif.
-disablesilentmode.key=M
-disablesilentmode.name=Mode Actif \!
+disable_silent_mode.description=Mode silencieux activ\u00E9, les fichiers ajout\u00E9s/modifi\u00E9s ne seront pas trouv\u00E9s. Passer en mode Actif.
+disable_silent_mode.key=M
+disable_silent_mode.name=Mode Actif \!
 
 download_panel.auto_cleanup.description=Nettoyer chaque t\u00E9l\u00E9chargement compl\u00E9t\u00E9
 download_panel.auto_cleanup.name=Auto-netttoyage
 
-downloadfile.description=t\u00E9l\u00E9charger le(s) fichier(s) s\u00E9lectionn\u00E9(s) (ou les fichiers dans le r\u00E9pertoire). Les fichiers effac\u00E9s seront t\u00E9l\u00E9charg\u00E9s \u00E0 nouveau.
-downloadfile.failed.sourcenotfound=Impossible de t\u00E9l\u00E9charger le fichier {0}, la source n'a pas \u00E9t\u00E9 trouv\u00E9e
-downloadfile.key=F
-downloadfile.name=Fichier(s) t\u00E9l\u00E9charg\u00E9(s)
-downloadfile.unable_to_download=Impossible de t\u00E9l\u00E9charger
+download_file.description=t\u00E9l\u00E9charger le(s) fichier(s) s\u00E9lectionn\u00E9(s) (ou les fichiers dans le r\u00E9pertoire). Les fichiers effac\u00E9s seront t\u00E9l\u00E9charg\u00E9s \u00E0 nouveau.
+download_file.failed.source_not_found=Impossible de t\u00E9l\u00E9charger le fichier {0}, la source n'a pas \u00E9t\u00E9 trouv\u00E9e
+download_file.key=F
+download_file.name=Fichier(s) t\u00E9l\u00E9charg\u00E9(s)
+download_file.unable_to_download=Impossible de t\u00E9l\u00E9charger
 
-downloads_panel.cleanup_activity.description=Nettoyer de vieux dossiers
-downloads_panel.cleanup_activity.title=Nettoyer
+downloads_panel.clean_up_activity.description=Nettoyer de vieux dossiers
+downloads_panel.clean_up_activity.title=Nettoyer
 
 empty_recycle_bin.description=Vider la poubelle PowerFolder
 empty_recycle_bin.key=P
@@ -254,9 +254,9 @@ empty_recycle_bin_confimation.empty=Vider
 empty_recycle_bin_confimation.text=La poubelle de PowerFolder sera vid\u00E9e.
 empty_recycle_bin_confimation.title=Vider la poubelle de PowerFolder
 
-enablesilentmode.description=D\u00E9sactive toutes les t\u00E2ches lourdes, par exemple l'identification d'un changement dans un dossier,\ndiminue l'activit\u00E9 du disque dur
-enablesilentmode.key=V
-enablesilentmode.name=Veille
+enable_silent_mode.description=D\u00E9sactive toutes les t\u00E2ches lourdes, par exemple l'identification d'un changement dans un dossier,\ndiminue l'activit\u00E9 du disque dur
+enable_silent_mode.key=V
+enable_silent_mode.name=Veille
 
 estimation.unknown=Inconnue
 
