--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -133,30 +133,30 @@ delete_confimation.busy.title=Cancellazione file(s)
 delete_confimation.text=Sei sicuro di voler cancellare i seguenti file\:\n\n{0}\nQuesti file saranno veramente cancellati dal sistema e non verranno spostati nel tuo "cestino".
 delete_confimation.text_delete=Sei sicuro di voler cancellare definitivamente questo(i) file?
 delete_confimation.text_delete_directory=Sei sicuro di voler cancellare definitivamente questo(i) file eo le directory (comprese le sottodirectories e i files)?
-delete_confimation.text_movetorecyclebin=Sei sicuro di voler mettere i seguenti file(s) nel cestino di PowerFolder?
-delete_confimation.text_movetorecyclebin_DIR=<DIR>
-delete_confimation.text_movetorecyclebin_directory=Sei sicuro di voler mettere i seguenti file(s) eo directories (incluso le sottodirectories e i files) \nnelcestino di PowerFolder?
+delete_confimation.text_move_to_recycle_bin=Sei sicuro di voler mettere i seguenti file(s) nel cestino di PowerFolder?
+delete_confimation.text_move_to_recycle_bin_DIR=<DIR>
+delete_confimation.text_move_to_recycle_bin_directory=Sei sicuro di voler mettere i seguenti file(s) eo directories (incluso le sottodirectories e i files) \nnelcestino di PowerFolder?
 delete_confimation.title=Elimina file?
 
-deletefile.description=Cancella il file selezionato/i
-deletefile.key=C
-deletefile.name=Cancella File(s)
+delete_file.description=Cancella il file selezionato/i
+delete_file.key=C
+delete_file.name=Cancella File(s)
 
-dialog.addmembertofriendlist.button.add=Aggiungi agli amici
-dialog.addmembertofriendlist.explain=E' possibile modificare facilmente lo stato\ndegli amici usando il men\u00F9 contestuale (click tasto dx).
-dialog.addmembertofriendlist.messageTitle=Messaggio da {0}
-dialog.addmembertofriendlist.question={0} si \u00E8 aggiunto a uno o pi\u00F9 PowerFolders\:\n\n{1}\nPotresti volerlo aggiungere alla lista di amici.
-dialog.addmembertofriendlist.question2={0} ti ha aggiunto alla sua lista di amici.\n\nPotresti volerlo aggiungere alla tua lista di amici.
-dialog.addmembertofriendlist.title=Aggiungi {0} alla lista degli amici
-dialog.alreadyrunning.exitbutton=Esci
-dialog.alreadyrunning.startbutton=Inizia comunque
-dialog.alreadyrunning.title=Gi\u00E0 in esecuzione
-dialog.alreadyrunning.warning=PowerFolder \u00E8 gi\u00E0 in esecuzione\n\nConsiglio\: se riavvi PowerFolder, \nelimina tutti i processi javaw/java e prova ancora
-dialog.binderror=Impossibile collegare la porta\!
-dialog.binderror.option.exit=Esci da PowerFolder
-dialog.binderror.option.ignore=Continua
-dialog.binderror.option.text=Impossibile connettersi sulla porta specificata(s)\!\nE' necessaria una porta collegata per ricevere\n le connessioni di PowerFolder entranti.
-dialog.binderror.option.title=Errore di collegamento alla porta\!
+dialog.add_member_to_friend_list.button.add=Aggiungi agli amici
+dialog.add_member_to_friend_list.explain=E' possibile modificare facilmente lo stato\ndegli amici usando il men\u00F9 contestuale (click tasto dx).
+dialog.add_member_to_friend_list.messageTitle=Messaggio da {0}
+dialog.add_member_to_friend_list.question={0} si \u00E8 aggiunto a uno o pi\u00F9 PowerFolders\:\n\n{1}\nPotresti volerlo aggiungere alla lista di amici.
+dialog.add_member_to_friend_list.question2={0} ti ha aggiunto alla sua lista di amici.\n\nPotresti volerlo aggiungere alla tua lista di amici.
+dialog.add_member_to_friend_list.title=Aggiungi {0} alla lista degli amici
+dialog.already_running.exit_button=Esci
+dialog.already_running.start_button=Inizia comunque
+dialog.already_running.title=Gi\u00E0 in esecuzione
+dialog.already_running.warning=PowerFolder \u00E8 gi\u00E0 in esecuzione\n\nConsiglio\: se riavvi PowerFolder, \nelimina tutti i processi javaw/java e prova ancora
+dialog.bind_error=Impossibile collegare la porta\!
+dialog.bind_error.option.exit=Esci da PowerFolder
+dialog.bind_error.option.ignore=Continua
+dialog.bind_error.option.text=Impossibile connettersi sulla porta specificata(s)\!\nE' necessaria una porta collegata per ricevere\n le connessioni di PowerFolder entranti.
+dialog.bind_error.option.title=Errore di collegamento alla porta\!
 dialog.connect.connecting=In connessione
 dialog.connect.connecting_to=In connessione a {0}...
 dialog.connection_problem=Problemi di connessione
@@ -189,16 +189,16 @@ dialog.create_edit_profile.title_edit=Modifica modalit\u00E0 di trasferimento pe
 dialog.create_edit_profile.weekdays=Giorni feriali
 dialog.create_edit_profile.weekends=Weekends
 dialog.delete_profile.title=Elimina modalit\u00E0 di trasferimento personalizzata
-dialog.directorychooser.new.description=Nuova directory
-dialog.directorychooser.new.exists={0}\nesiste gi\u00E0
-dialog.directorychooser.new.key=N
-dialog.directorychooser.new.name=Nuovo
-dialog.directorychooser.new.problem=Si \u00E8 verificato un problema nella creazione di\n{0}
-dialog.directorychooser.text=Selezionare una directory dalla lista e poi cliccare 'OK'.\nE' possibile espandere le directory cliccando sugli ancoraggi.
-dialog.directorychooser.title=Selezione directory
-dialog.fatalerror.title=Errore Fatale
-dialog.newdirectorycreator.text=Inserire il nome di una nuova sottodirectory di\n{0}
-dialog.newdirectorycreator.title=Nuova directory
+dialog.directory_chooser.new.description=Nuova directory
+dialog.directory_chooser.new.exists={0}\nesiste gi\u00E0
+dialog.directory_chooser.new.key=N
+dialog.directory_chooser.new.name=Nuovo
+dialog.directory_chooser.new.problem=Si \u00E8 verificato un problema nella creazione di\n{0}
+dialog.directory_chooser.text=Selezionare una directory dalla lista e poi cliccare 'OK'.\nE' possibile espandere le directory cliccando sugli ancoraggi.
+dialog.directory_chooser.title=Selezione directory
+dialog.fatal_error.title=Errore Fatale
+dialog.new_directory_creator.text=Inserire il nome di una nuova sottodirectory di\n{0}
+dialog.new_directory_creator.title=Nuova directory
 dialog.synchronization.choose=Scegli la tua azione di sincronizzazione
 dialog.synchronization.duplicate.delete=La cancellazione di questo profilo si ripercuoter\u00E0 su tutte queste cartelle.
 dialog.synchronization.duplicate.edit=La modifica di questo profilo si ripercuoter\u00E0 su tutte queste cartelle.
@@ -212,34 +212,34 @@ dialog.synchronization.title=Sincronizzazione manuale
 dialog.unable_to_connect_to_address=Impossibile connettersi a {0}
 dialog.unable_to_connect_to_member=Impossibile connettersi a {0}
 dialog.unable_to_open_port=Impossibile aprire una porta locale {0}, forse PowerFolder \u00E8 gi\u00E0 avviato
-dialog.updatecheck.developmentversion.optionrestart=Riavvia
-dialog.updatecheck.downloadAndUpdate=Scarica e aggiorna ora
-dialog.updatecheck.failed.text=Aggiornamento fallito. Si prega di controllare la connessione internet.\n \nPowerFolder Pro\: Si prega di controllare anche l'account Update-Service in\nImpostazioni/Pro Impostazioni/PowerFolder Pro Loader.
-dialog.updatecheck.failed.title=Aggiornamento fallito
-dialog.updatecheck.gotoHomepage=Vai all'homepage di PowerFolder
-dialog.updatecheck.noUpdateAvailable=Questa versione \u00E8 aggiornata
-dialog.updatecheck.nothingNeverAsk=Non chiedere pi\u00F9 nulla
-dialog.updatecheck.text=Una nuova versione di PowerFolder \u00E8 disponibile            \n\nQuesta versione\: v{0}\nUltima versione\: v{1} (recente)\n
-dialog.updatecheck.title=Nuova versione disponibile
+dialog.update_check.development_version.option_restart=Riavvia
+dialog.update_check.downloadAndUpdate=Scarica e aggiorna ora
+dialog.update_check.failed.text=Aggiornamento fallito. Si prega di controllare la connessione internet.\n \nPowerFolder Pro\: Si prega di controllare anche l'account Update-Service in\nImpostazioni/Pro Impostazioni/PowerFolder Pro Loader.
+dialog.update_check.failed.title=Aggiornamento fallito
+dialog.update_check.gotoHomepage=Vai all'homepage di PowerFolder
+dialog.update_check.noUpdateAvailable=Questa versione \u00E8 aggiornata
+dialog.update_check.nothingNeverAsk=Non chiedere pi\u00F9 nulla
+dialog.update_check.text=Una nuova versione di PowerFolder \u00E8 disponibile            \n\nQuesta versione\: v{0}\nUltima versione\: v{1} (recente)\n
+dialog.update_check.title=Nuova versione disponibile
 dialog.user_select.online_only=
 dialog.user_select.text=Seleziona utenti da invitare. Tieni premuto il tasto Ctrl per selezione multipla di utenti.
 dialog.user_select.title=Seleziona utenti
 
-disablesilentmode.description=Siletmode \u00E8 attualmente attivo, file modificati/aggiunti non saranno trovati. Premi per tornare in modalit\u00E0 completa.
-disablesilentmode.key=S
-disablesilentmode.name=Sveglia\!
+disable_silent_mode.description=Siletmode \u00E8 attualmente attivo, file modificati/aggiunti non saranno trovati. Premi per tornare in modalit\u00E0 completa.
+disable_silent_mode.key=S
+disable_silent_mode.name=Sveglia\!
 
 download_panel.auto_cleanup.description=Cancella tutti i download quando sono completi
 download_panel.auto_cleanup.name=Cancellazione automatica
 
-downloadfile.description=Download del file(s) selezionato (o file in una directory). I file cancellati saranno scaricati nuovamente
-downloadfile.failed.sourcenotfound=Impossibile scaricare il file {0}, fonte non trovata
-downloadfile.key=D
-downloadfile.name=Download file(s)
-downloadfile.unable_to_download=Download impossibile
+download_file.description=Download del file(s) selezionato (o file in una directory). I file cancellati saranno scaricati nuovamente
+download_file.failed.source_not_found=Impossibile scaricare il file {0}, fonte non trovata
+download_file.key=D
+download_file.name=Download file(s)
+download_file.unable_to_download=Download impossibile
 
-downloads_panel.cleanup_activity.description=Cancellazione dei vecchi download
-downloads_panel.cleanup_activity.title=Cancellazione in corso
+downloads_panel.clean_up_activity.description=Cancellazione dei vecchi download
+downloads_panel.clean_up_activity.title=Cancellazione in corso
 
 empty_recycle_bin.description=Svuota il cestino di PowerFolder
 empty_recycle_bin.key=S
@@ -252,9 +252,9 @@ empty_recycle_bin_confimation.empty=Svuota
 empty_recycle_bin_confimation.text=Il cestino di PowerFolder sar\u00E0 svuotato.
 empty_recycle_bin_confimation.title=Svuota il cestino diPowerFolder
 
-enablesilentmode.description=Disabilita tutti i processi pesanti, come la scansione per i cambiamenti nelle cartelle, eliminando qualsiasi attivit\u00E0 su disco
-enablesilentmode.key=s
-enablesilentmode.name=Esegui silenzioso
+enable_silent_mode.description=Disabilita tutti i processi pesanti, come la scansione per i cambiamenti nelle cartelle, eliminando qualsiasi attivit\u00E0 su disco
+enable_silent_mode.key=s
+enable_silent_mode.name=Esegui silenzioso
 
 estimation.unknown=sconosciuto
 
