--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -133,30 +133,30 @@ delete_confimation.busy.title=Usuwanie plik\u00f3w
 delete_confimation.text=Czy na pewno chcesz usun\u0105\u0107 nast\u0119puj\u0105ce pliki?\:\n (Pliki zostan\u0105 usuni\u0119te z dysku, a nie przeniesione do Kosza)
 delete_confimation.text_delete=Czy na pewno chcesz ca\u0142kowicie usun\u0105\u0107 nast\u0119puj\u0105ce pliki?
 delete_confimation.text_delete_directory=Czy na pewno chcesz usun\u0105\u0107 nast\u0119puj\u0105ce pliki oraz/lub foldery\n(razem z podfolderami i plikami)?
-delete_confimation.text_movetorecyclebin=Czy na pewno chcesz przenie\u015b\u0107 nast\u0119puj\u0105ce pliki do Kosza PowerFolder?
-delete_confimation.text_movetorecyclebin_DIR=<FOLDER>
-delete_confimation.text_movetorecyclebin_directory=Czy na pewno chcesz przenie\u015b\u0107 nast\u0119puj\u0105ce pliki oraz/lub foldery (razem z podfolderami i plikami) do\nKosza PowerFolder?
+delete_confimation.text_move_to_recycle_bin=Czy na pewno chcesz przenie\u015b\u0107 nast\u0119puj\u0105ce pliki do Kosza PowerFolder?
+delete_confimation.text_move_to_recycle_bin_DIR=<FOLDER>
+delete_confimation.text_move_to_recycle_bin_directory=Czy na pewno chcesz przenie\u015b\u0107 nast\u0119puj\u0105ce pliki oraz/lub foldery (razem z podfolderami i plikami) do\nKosza PowerFolder?
 delete_confimation.title=Usun\u0105\u0107 pliki?
 
-deletefile.description=Usu\u0144 zaznaczone pliki
-deletefile.key=F
-deletefile.name=Usu\u0144 pliki
+delete_file.description=Usu\u0144 zaznaczone pliki
+delete_file.key=F
+delete_file.name=Usu\u0144 pliki
 
-##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
-##dialog.addmembertofriendlist.messageTitle=Message from {0}
-##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
-##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
-dialog.addmembertofriendlist.title=Dodaj {0} do Listy Znajomych
-dialog.alreadyrunning.exitbutton=Wyj\u015bcie
-dialog.alreadyrunning.startbutton=Uruchom
-dialog.alreadyrunning.title=Program jest ju\u017c uruchomiony
-dialog.alreadyrunning.warning=PowerFolder jest ju\u017c uruchomiony\n\nPodpowied\u017a\: Je\u015bli PowerFolder zosta\u0142 uruchomiony ponownie, \nzamknij wszystkie procesy javaw/java i spr\u00f3buj ponownie
-dialog.binderror=Nie mo\u017cna zbindowa\u0107 portu\!
-##dialog.binderror.option.exit=Exit PowerFolder
-##dialog.binderror.option.ignore=Continue
-##dialog.binderror.option.text=Unable to bind on specified port(s)\!\nAn bound port is required for PowerFolder to\nreceive incoming connections.
-##dialog.binderror.option.title=Port binding error\!
+##dialog.add_member_to_friend_list.button.add=Add To Friends
+##dialog.add_member_to_friend_list.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
+##dialog.add_member_to_friend_list.messageTitle=Message from {0}
+##dialog.add_member_to_friend_list.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
+##dialog.add_member_to_friend_list.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
+dialog.add_member_to_friend_list.title=Dodaj {0} do Listy Znajomych
+dialog.already_running.exit_button=Wyj\u015bcie
+dialog.already_running.start_button=Uruchom
+dialog.already_running.title=Program jest ju\u017c uruchomiony
+dialog.already_running.warning=PowerFolder jest ju\u017c uruchomiony\n\nPodpowied\u017a\: Je\u015bli PowerFolder zosta\u0142 uruchomiony ponownie, \nzamknij wszystkie procesy javaw/java i spr\u00f3buj ponownie
+dialog.bind_error=Nie mo\u017cna zbindowa\u0107 portu\!
+##dialog.bind_error.option.exit=Exit PowerFolder
+##dialog.bind_error.option.ignore=Continue
+##dialog.bind_error.option.text=Unable to bind on specified port(s)\!\nAn bound port is required for PowerFolder to\nreceive incoming connections.
+##dialog.bind_error.option.title=Port binding error\!
 dialog.connect.connecting=\u0141\u0105czenie
 dialog.connect.connecting_to=\u0141\u0105czenie z {0}...
 dialog.connection_problem=Problem z po\u0142\u0105czeniem
@@ -189,16 +189,16 @@ dialog.connection_problem=Problem z po\u0142\u0105czeniem
 ##dialog.create_edit_profile.weekdays=Weekdays
 ##dialog.create_edit_profile.weekends=Weekends
 ##dialog.delete_profile.title=Delete custom transfer mode
-dialog.directorychooser.new.description=Nowy profil
-dialog.directorychooser.new.exists={0}\nju\u017c istnieje
-dialog.directorychooser.new.key=N
-dialog.directorychooser.new.name=Nowy
-dialog.directorychooser.new.problem=Wyst\u0105pi\u0142 problem podczas tworzenia\n{0}
-dialog.directorychooser.text=Wybierz folder z poni\u017cszej listy, nast\u0119pnie kliknij 'OK'.\nMo\u017cesz rozwija\u0107 katalogi klikaj\u0105c.
-dialog.directorychooser.title=Wybierz folder
-dialog.fatalerror.title=B\u0142\u0105d krytyczny
-dialog.newdirectorycreator.text=Wprowad\u017a nazw\u0119 dla nowego podfolderu w \n{0}
-dialog.newdirectorycreator.title=Nowy Folder
+dialog.directory_chooser.new.description=Nowy profil
+dialog.directory_chooser.new.exists={0}\nju\u017c istnieje
+dialog.directory_chooser.new.key=N
+dialog.directory_chooser.new.name=Nowy
+dialog.directory_chooser.new.problem=Wyst\u0105pi\u0142 problem podczas tworzenia\n{0}
+dialog.directory_chooser.text=Wybierz folder z poni\u017cszej listy, nast\u0119pnie kliknij 'OK'.\nMo\u017cesz rozwija\u0107 katalogi klikaj\u0105c.
+dialog.directory_chooser.title=Wybierz folder
+dialog.fatal_error.title=B\u0142\u0105d krytyczny
+dialog.new_directory_creator.text=Wprowad\u017a nazw\u0119 dla nowego podfolderu w \n{0}
+dialog.new_directory_creator.title=Nowy Folder
 dialog.synchronization.choose=Wybierz akcj\u0119 synchronizacji
 ##dialog.synchronization.duplicate.delete=Deleting this profile will affect all these folders.
 ##dialog.synchronization.duplicate.edit=Editing this profile will affect all these folders.
@@ -212,34 +212,34 @@ dialog.synchronization.sychronizing=Synchronizacja...
 dialog.unable_to_connect_to_address=Nie mo\u017cna si\u0119 po\u0142\u0105czy\u0107 z {0}
 dialog.unable_to_connect_to_member=Nie mo\u017cna si\u0119 po\u0142\u0105czy\u0107 z {0}
 dialog.unable_to_open_port=Nie mo\u017cna otworzy\u0107 lokalnego portu {0}, by\u0107 mo\u017ce PowerFolder jest ju\u017c uruchomiony
-dialog.updatecheck.developmentversion.optionrestart=Restart
-dialog.updatecheck.downloadAndUpdate=Pobierz i Aktualizuj teraz
-dialog.updatecheck.failed.text=Aktualizacja nie powiod\u0142a si\u0119. Sprawd\u017a po\u0142\u0105czenie z internetem. \n \nPowerFolder Pro\: Sprawd\u017a tak\u017ce Twoje konto Update-Service w\nUstawienia/Ustawienia Pro/PowerFolder Pro Loader.
-dialog.updatecheck.failed.title=Aktualizacja nie powiod\u0142a si\u0119
-dialog.updatecheck.gotoHomepage=Id\u017a do strony domowej PowerFolder
-dialog.updatecheck.noUpdateAvailable=Wersja jest aktualna
-dialog.updatecheck.nothingNeverAsk=Nigdy wi\u0119cej o nic nie pytaj
-dialog.updatecheck.text=Dost\u0119pna jest nowa wersja PowerFolder            \n\nObecna wersja\: v{0}\nNajnowsza dost\u0119pna\: v{1} (nowsza)\n
-dialog.updatecheck.title=Dost\u0119pna jest nowa wersja
+dialog.update_check.development_version.option_restart=Restart
+dialog.update_check.downloadAndUpdate=Pobierz i Aktualizuj teraz
+dialog.update_check.failed.text=Aktualizacja nie powiod\u0142a si\u0119. Sprawd\u017a po\u0142\u0105czenie z internetem. \n \nPowerFolder Pro\: Sprawd\u017a tak\u017ce Twoje konto Update-Service w\nUstawienia/Ustawienia Pro/PowerFolder Pro Loader.
+dialog.update_check.failed.title=Aktualizacja nie powiod\u0142a si\u0119
+dialog.update_check.gotoHomepage=Id\u017a do strony domowej PowerFolder
+dialog.update_check.noUpdateAvailable=Wersja jest aktualna
+dialog.update_check.nothingNeverAsk=Nigdy wi\u0119cej o nic nie pytaj
+dialog.update_check.text=Dost\u0119pna jest nowa wersja PowerFolder            \n\nObecna wersja\: v{0}\nNajnowsza dost\u0119pna\: v{1} (nowsza)\n
+dialog.update_check.title=Dost\u0119pna jest nowa wersja
 dialog.user_select.online_only=Tylko online
 dialog.user_select.text=Wybierz u\u017cytkownik\u00f3w, kt\u00f3rych chcesz zaprosi\u0107. Przytrzymaj Ctrl, aby zaznaczy\u0107 kilku u\u017cytkownik\u00f3w.
 dialog.user_select.title=Wybierz U\u017cytkownik\u00f3w
 
-disablesilentmode.description=Tryb cichy jest aktywny, dodane/zmodyfikowane pliki nie b\u0119d\u0105 dost\u0119pne. Wci\u015bnij, aby prze\u0142\u0105czy\u0107 w tryb pe\u0142ny
-disablesilentmode.key=w
-disablesilentmode.name=Obud\u017a\!
+disable_silent_mode.description=Tryb cichy jest aktywny, dodane/zmodyfikowane pliki nie b\u0119d\u0105 dost\u0119pne. Wci\u015bnij, aby prze\u0142\u0105czy\u0107 w tryb pe\u0142ny
+disable_silent_mode.key=w
+disable_silent_mode.name=Obud\u017a\!
 
 download_panel.auto_cleanup.description=Automatycznie czy\u015bci wszystkie uko\u0144czone pobierania
 download_panel.auto_cleanup.name=Automatyczne czyszczenie
 
-downloadfile.description=Pobierz zaznaczone pliki. Usuni\u0119te pliki zostan\u0105 ponownie pobrane
-downloadfile.failed.sourcenotfound=Nie mo\u017cna pobra\u0107 pliku {0}, nie znaleziono \u017ar\u00f3d\u0142a
-downloadfile.key=D
-downloadfile.name=Pobierz pliki
-downloadfile.unable_to_download=Nie mo\u017cna pobra\u0107 plik\u00f3w
+download_file.description=Pobierz zaznaczone pliki. Usuni\u0119te pliki zostan\u0105 ponownie pobrane
+download_file.failed.source_not_found=Nie mo\u017cna pobra\u0107 pliku {0}, nie znaleziono \u017ar\u00f3d\u0142a
+download_file.key=D
+download_file.name=Pobierz pliki
+download_file.unable_to_download=Nie mo\u017cna pobra\u0107 plik\u00f3w
 
-##downloads_panel.cleanup_activity.description=Cleaning up old downloads
-##downloads_panel.cleanup_activity.title=Cleaning up
+##downloads_panel.clean_up_activity.description=Cleaning up old downloads
+##downloads_panel.clean_up_activity.title=Cleaning up
 
 empty_recycle_bin.description=Opr\u00f3\u017cnij Kosz PowerFolder
 empty_recycle_bin.key=E
@@ -252,9 +252,9 @@ empty_recycle_bin_confimation.empty=Opr\u00f3\u017cnij
 empty_recycle_bin_confimation.text=Kosz PowerFolder zostanie opr\u00f3\u017cniony.
 empty_recycle_bin_confimation.title=Opr\u00f3\u017cnianie Kosza PowerFolder
 
-enablesilentmode.description=Zmiany w folderach nie b\u0119d\u0105 \u015bledzone, mniejsza aktywno\u015b\u0107 dysku
-enablesilentmode.key=s
-enablesilentmode.name=Tryb Cichy
+enable_silent_mode.description=Zmiany w folderach nie b\u0119d\u0105 \u015bledzone, mniejsza aktywno\u015b\u0107 dysku
+enable_silent_mode.key=s
+enable_silent_mode.name=Tryb Cichy
 
 ##estimation.unknown=unknown
 
