--- a/src/etc/Translation_sv.properties
+++ b/src/etc/Translation_sv.properties
@@ -133,30 +133,30 @@ delete_confimation.busy.title=Tar bort fil(er)
 delete_confimation.text=\u00c4r du s\u00e4ker p\u00e5 att du vill ta bort\:\n\n{0}\n (Obs\: Borttagningen \u00e4r permanent och flyttas inte till "papperskorgen").
 ##delete_confimation.text_delete=Are you sure you want to permanently delete the following file(s)?
 ##delete_confimation.text_delete_directory=Are you sure you want to permanently delete the following file(s) and\nor directories (including subdirectories and the files)?
-delete_confimation.text_movetorecyclebin=\u00c4r du s\u00e4ker p\u00e5 att du vill flytta dessa filer till PowerFolders papperskorg?
-delete_confimation.text_movetorecyclebin_DIR=<DIR>
-delete_confimation.text_movetorecyclebin_directory=\u00c4r du s\u00e4ker p\u00e5 att du vill flytta dessa filer och/eller mappar (inklusive under-mappar och filer) till\nPowerFolders papperskorg?
+delete_confimation.text_move_to_recycle_bin=\u00c4r du s\u00e4ker p\u00e5 att du vill flytta dessa filer till PowerFolders papperskorg?
+delete_confimation.text_move_to_recycle_bin_DIR=<DIR>
+delete_confimation.text_move_to_recycle_bin_directory=\u00c4r du s\u00e4ker p\u00e5 att du vill flytta dessa filer och/eller mappar (inklusive under-mappar och filer) till\nPowerFolders papperskorg?
 delete_confimation.title=Tag bort fil(er)?
 
-deletefile.description=Tag bort valda fil(er)
-deletefile.key=F
-deletefile.name=Tag bort fil(er)
+delete_file.description=Tag bort valda fil(er)
+delete_file.key=F
+delete_file.name=Tag bort fil(er)
 
-##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
-##dialog.addmembertofriendlist.messageTitle=Message from {0}
-##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
-##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
-dialog.addmembertofriendlist.title=L\u00e4gg till {0} i din v\u00e4nlista
-dialog.alreadyrunning.exitbutton=Avsluta
-dialog.alreadyrunning.startbutton=Starta \u00e4nd\u00e5
-dialog.alreadyrunning.title=K\u00f6r redan
-dialog.alreadyrunning.warning=PowerFolder k\u00f6r redan\n\nTips\: Om du har startat om PowerFolder, \nstoppa alla javaw/java processer och f\u00f6rs\u00f6k igen
-dialog.binderror=N\u00e4tverksporten \u00e4r upptagen\!
-##dialog.binderror.option.exit=Exit PowerFolder
-##dialog.binderror.option.ignore=Continue
-##dialog.binderror.option.text=Unable to bind on specified port(s)\!\nAn bound port is required for PowerFolder to\nreceive incoming connections.
-##dialog.binderror.option.title=Port binding error\!
+##dialog.add_member_to_friend_list.button.add=Add To Friends
+##dialog.add_member_to_friend_list.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
+##dialog.add_member_to_friend_list.messageTitle=Message from {0}
+##dialog.add_member_to_friend_list.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
+##dialog.add_member_to_friend_list.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
+dialog.add_member_to_friend_list.title=L\u00e4gg till {0} i din v\u00e4nlista
+dialog.already_running.exit_button=Avsluta
+dialog.already_running.start_button=Starta \u00e4nd\u00e5
+dialog.already_running.title=K\u00f6r redan
+dialog.already_running.warning=PowerFolder k\u00f6r redan\n\nTips\: Om du har startat om PowerFolder, \nstoppa alla javaw/java processer och f\u00f6rs\u00f6k igen
+dialog.bind_error=N\u00e4tverksporten \u00e4r upptagen\!
+##dialog.bind_error.option.exit=Exit PowerFolder
+##dialog.bind_error.option.ignore=Continue
+##dialog.bind_error.option.text=Unable to bind on specified port(s)\!\nAn bound port is required for PowerFolder to\nreceive incoming connections.
+##dialog.bind_error.option.title=Port binding error\!
 dialog.connect.connecting=Ansluter
 dialog.connect.connecting_to=Ansluter till {0}...
 dialog.connection_problem=Anslutningsproblem
@@ -189,16 +189,16 @@ dialog.connection_problem=Anslutningsproblem
 ##dialog.create_edit_profile.weekdays=Weekdays
 ##dialog.create_edit_profile.weekends=Weekends
 ##dialog.delete_profile.title=Delete custom transfer mode
-##dialog.directorychooser.new.description=New directory
-##dialog.directorychooser.new.exists={0}\nalready exists
-##dialog.directorychooser.new.key=N
-##dialog.directorychooser.new.name=New
-##dialog.directorychooser.new.problem=There was a problem creating\n{0}
-##dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
-##dialog.directorychooser.title=Select directory
-dialog.fatalerror.title=Allvarligt fel
-##dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
-##dialog.newdirectorycreator.title=New directory
+##dialog.directory_chooser.new.description=New directory
+##dialog.directory_chooser.new.exists={0}\nalready exists
+##dialog.directory_chooser.new.key=N
+##dialog.directory_chooser.new.name=New
+##dialog.directory_chooser.new.problem=There was a problem creating\n{0}
+##dialog.directory_chooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
+##dialog.directory_chooser.title=Select directory
+dialog.fatal_error.title=Allvarligt fel
+##dialog.new_directory_creator.text=Enter the name of the new subdirectory of\n{0}
+##dialog.new_directory_creator.title=New directory
 dialog.synchronization.choose=V\u00e4lj alternativ f\u00f6r synkronisering
 ##dialog.synchronization.duplicate.delete=Deleting this profile will affect all these folders.
 ##dialog.synchronization.duplicate.edit=Editing this profile will affect all these folders.
@@ -212,34 +212,34 @@ dialog.synchronization.sychronizing=Synkroniserar...
 dialog.unable_to_connect_to_address=Kan inte ansluta till {0}
 dialog.unable_to_connect_to_member=Kan inte ansluta till {0}
 dialog.unable_to_open_port=Kan inte ansluta till port {0}, PowerFolder kanske redan k\u00f6r
-dialog.updatecheck.developmentversion.optionrestart=Starta om
-dialog.updatecheck.downloadAndUpdate=Ladda ner och uppdatera nu
-dialog.updatecheck.failed.text=Uppdatering misslyckades. Kontrollera internetkopplingen.\n \nPowerFolder Pro\: Kontrollera ocks\u00e5 ditt Uppdateringsservice konto under\nInst\u00e4llningar/Pro inst\u00e4llningar/PowerFolder Pro Loader
-dialog.updatecheck.failed.title=Uppdatering misslyckades
-dialog.updatecheck.gotoHomepage=G\u00e5 till PowerFolder hemsida
-dialog.updatecheck.noUpdateAvailable=Denna version \u00e4r uppdaterad
-dialog.updatecheck.nothingNeverAsk=Ingenting och fr\u00e5ga aldrig igen
-dialog.updatecheck.text=En nyare version av PowerFolder \u00e4r tillg\u00e4nglig            \n\nDenna version\: v{0}\nSenaste tillg\u00e4ngliga\: v{1} (nyare)\n
-dialog.updatecheck.title=Nyare version tillg\u00e4nglig
+dialog.update_check.development_version.option_restart=Starta om
+dialog.update_check.downloadAndUpdate=Ladda ner och uppdatera nu
+dialog.update_check.failed.text=Uppdatering misslyckades. Kontrollera internetkopplingen.\n \nPowerFolder Pro\: Kontrollera ocks\u00e5 ditt Uppdateringsservice konto under\nInst\u00e4llningar/Pro inst\u00e4llningar/PowerFolder Pro Loader
+dialog.update_check.failed.title=Uppdatering misslyckades
+dialog.update_check.gotoHomepage=G\u00e5 till PowerFolder hemsida
+dialog.update_check.noUpdateAvailable=Denna version \u00e4r uppdaterad
+dialog.update_check.nothingNeverAsk=Ingenting och fr\u00e5ga aldrig igen
+dialog.update_check.text=En nyare version av PowerFolder \u00e4r tillg\u00e4nglig            \n\nDenna version\: v{0}\nSenaste tillg\u00e4ngliga\: v{1} (nyare)\n
+dialog.update_check.title=Nyare version tillg\u00e4nglig
 ##dialog.user_select.online_only=
 ##dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
 ##dialog.user_select.title=Select Users
 
-disablesilentmode.description=Passiv mod \u00e4r aktiverad, nya/\u00e4ndrade filer kommer inte att hittas. Klicka f\u00f6r aktiv mod
-disablesilentmode.key=v
-disablesilentmode.name=Vakna\! Till aktiv mod
+disable_silent_mode.description=Passiv mod \u00e4r aktiverad, nya/\u00e4ndrade filer kommer inte att hittas. Klicka f\u00f6r aktiv mod
+disable_silent_mode.key=v
+disable_silent_mode.name=Vakna\! Till aktiv mod
 
 ##download_panel.auto_cleanup.description=Cleans up any downloads when they complete
 ##download_panel.auto_cleanup.name=Auto-cleanup
 
-downloadfile.description=Ladda ner vald(a) fil(er) (eller filer i mapp). Borttagna filer kommer att laddas ner igen
-downloadfile.failed.sourcenotfound=Kan inte ladda ner filen {0}, k\u00e4ll-filen hittas inte
-downloadfile.key=L
-downloadfile.name=Ladda ner fil(er)
-downloadfile.unable_to_download=Kan inte ladda ner
+download_file.description=Ladda ner vald(a) fil(er) (eller filer i mapp). Borttagna filer kommer att laddas ner igen
+download_file.failed.source_not_found=Kan inte ladda ner filen {0}, k\u00e4ll-filen hittas inte
+download_file.key=L
+download_file.name=Ladda ner fil(er)
+download_file.unable_to_download=Kan inte ladda ner
 
-##downloads_panel.cleanup_activity.description=Cleaning up old downloads
-##downloads_panel.cleanup_activity.title=Cleaning up
+##downloads_panel.clean_up_activity.description=Cleaning up old downloads
+##downloads_panel.clean_up_activity.title=Cleaning up
 
 empty_recycle_bin.description=T\u00f6m PowerFolders papperskorg
 empty_recycle_bin.key=T
@@ -252,9 +252,9 @@ empty_recycle_bin.working.title=T\u00f6mmer papperskorgen
 ##empty_recycle_bin_confimation.text=PowerFolder Recycle Bin will be emptied.
 empty_recycle_bin_confimation.title=T\u00f6m PowerFolders pappeskorg
 
-enablesilentmode.description=Passiv mod. Uppph\u00f6r med all tung aktivitet, som t.ex. att leta efter f\u00f6r\u00e4ndringar i foldrar. Ingen disk-aktivitet
-enablesilentmode.key=P
-enablesilentmode.name=Passiv mod
+enable_silent_mode.description=Passiv mod. Uppph\u00f6r med all tung aktivitet, som t.ex. att leta efter f\u00f6r\u00e4ndringar i foldrar. Ingen disk-aktivitet
+enable_silent_mode.key=P
+enable_silent_mode.name=Passiv mod
 
 ##estimation.unknown=unknown
 
