--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -133,30 +133,30 @@ delete_confimation.busy.title=\u30D5\u30A1\u30A4\u30EB\u524A\u9664\u4E2D
 delete_confimation.text=\u672C\u5F53\u306B\u4EE5\u4E0B\u306E\u30D5\u30A1\u30A4\u30EB\u3092\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F\:\n\uFF08\u3053\u308C\u3089\u306E\u30D5\u30A1\u30A4\u30EB\u306F\u201D\u3054\u307F\u7BB1\u201D\u3078\u79FB\u52D5\u3055\u308C\u305A\u306B\u3001\u30B7\u30B9\u30C6\u30E0\u304B\u3089\u5B9F\u969B\u306B\u524A\u9664\u3055\u308C\u308B\u306E\u3067\u6CE8\u610F\u3057\u3066\u304F\u3060\u3055\u3044\u3002\uFF09
 delete_confimation.text_delete=\u672C\u5F53\u306B\u4EE5\u4E0B\u306E\u30D5\u30A1\u30A4\u30EB\u3092\u5B8C\u5168\u306B\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F
 delete_confimation.text_delete_directory=\u672C\u5F53\u306B\u4EE5\u4E0B\u306E\u30D5\u30A1\u30A4\u30EB\u304A\u3088\u3073\uFF08\u307E\u305F\u306F\uFF09\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\uFF08\u542B\u30B5\u30D6\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3068\u305D\u306E\u30D5\u30A1\u30A4\u30EB)\u3092\u5B8C\u5168\u306B\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F
-delete_confimation.text_movetorecyclebin=\u672C\u5F53\u306B\u4EE5\u4E0B\u306E\u30D5\u30A1\u30A4\u30EB\u3092 PowerFolder \u3054\u307F\u7BB1 \u3078\u79FB\u3057\u307E\u3059\u304B\uFF1F
-delete_confimation.text_movetorecyclebin_DIR=<DIR>
-delete_confimation.text_movetorecyclebin_directory=\u672C\u5F53\u306B\u4EE5\u4E0B\u306E\u30D5\u30A1\u30A4\u30EB\u304A\u3088\u3073\uFF08\u307E\u305F\u306F\uFF09\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\uFF08\u542B\u30B5\u30D6\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3068\u305D\u306E\u30D5\u30A1\u30A4\u30EB\uFF09\u3092 \nPowerFolder \u30B4\u30DF\u7BB1\u306B\u79FB\u52D5\u3055\u305B\u307E\u3059\u304B\uFF1F
+delete_confimation.text_move_to_recycle_bin=\u672C\u5F53\u306B\u4EE5\u4E0B\u306E\u30D5\u30A1\u30A4\u30EB\u3092 PowerFolder \u3054\u307F\u7BB1 \u3078\u79FB\u3057\u307E\u3059\u304B\uFF1F
+delete_confimation.text_move_to_recycle_bin_DIR=<DIR>
+delete_confimation.text_move_to_recycle_bin_directory=\u672C\u5F53\u306B\u4EE5\u4E0B\u306E\u30D5\u30A1\u30A4\u30EB\u304A\u3088\u3073\uFF08\u307E\u305F\u306F\uFF09\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\uFF08\u542B\u30B5\u30D6\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3068\u305D\u306E\u30D5\u30A1\u30A4\u30EB\uFF09\u3092 \nPowerFolder \u30B4\u30DF\u7BB1\u306B\u79FB\u52D5\u3055\u305B\u307E\u3059\u304B\uFF1F
 delete_confimation.title=\u30D5\u30A1\u30A4\u30EB\u3092\u524A\u9664\u3057\u307E\u3059\u304B\uFF1F
 
-deletefile.description=\u9078\u629E\u30D5\u30A1\u30A4\u30EB\u306E\u524A\u9664
-deletefile.key=F
-deletefile.name=\u30D5\u30A1\u30A4\u30EB\u524A\u9664(F)
+delete_file.description=\u9078\u629E\u30D5\u30A1\u30A4\u30EB\u306E\u524A\u9664
+delete_file.key=F
+delete_file.name=\u30D5\u30A1\u30A4\u30EB\u524A\u9664(F)
 
-dialog.addmembertofriendlist.button.add=\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0
-dialog.addmembertofriendlist.explain=\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u30E1\u30CB\u30E5\u30FC\uFF08\u30DE\u30A6\u30B9\u53F3\u30AF\u30EA\u30C3\u30AF\uFF09\u3092\u4F7F\u7528\u3057\u3066\u3001\u7C21\u5358\u306B\u53CB\u4EBA\u306E\u30B9\u30C6\u30FC\u30BF\u30B9\u306E\u5909\u66F4\u304C\u3067\u304D\u307E\u3059\u3002
-dialog.addmembertofriendlist.messageTitle={0} \u3055\u3093\u304B\u3089\u30E1\u30C3\u30BB\u30FC\u30B8
-dialog.addmembertofriendlist.question={0} \u3055\u3093\u304C1\u3064\u307E\u305F\u306F\u305D\u308C\u4EE5\u4E0A\u306E\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\:\n\n{1}\n\u3053\u306E\u30E6\u30FC\u30B6\u30FC\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0\u3059\u308B\u3053\u3068\u3082\u53EF\u80FD\u3067\u3059\u3002
-dialog.addmembertofriendlist.question2={0} \u3055\u3093\u304C\u3042\u306A\u305F\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0\u3057\u307E\u3057\u305F\u3002\n\n\u3053\u306E\u30E6\u30FC\u30B6\u30FC\u3092\u3042\u306A\u305F\u306E\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0\u3059\u308B\u3053\u3068\u3082\u53EF\u80FD\u3067\u3059\u3002
-dialog.addmembertofriendlist.title=\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B {0} \u3055\u3093\u3092\u8FFD\u52A0
-dialog.alreadyrunning.exitbutton=\u7D42\u4E86
-dialog.alreadyrunning.startbutton=\u8D77\u52D5\u7D9A\u884C
-dialog.alreadyrunning.title=\u3059\u3067\u306B\u7A3C\u50CD\u4E2D
-dialog.alreadyrunning.warning=PowerFolder \u306F\u3059\u3067\u306B\u7A3C\u52D5\u3057\u3066\u3044\u307E\u3059\u3002\n\n\u30D2\u30F3\u30C8\:  PowerFolder \u306E\u518D\u8D77\u52D5\u3092\u884C\u3063\u3066\u3044\u305F\u5834\u5408\u306F\u3001\njavaw/java \u30D7\u30ED\u30BB\u30B9\u3092\u3059\u3079\u3066\u505C\u6B62\u3057\u3066\u304B\u3089\u3001\u3082\u3046\u4E00\u5EA6\u8A66\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-dialog.binderror=\u30DD\u30FC\u30C8\u3078\u306E\u30D0\u30A4\u30F3\u30C9\u4E0D\u53EF\uFF01
-dialog.binderror.option.exit=PowerFolder \u3092\u7D42\u4E86
-dialog.binderror.option.ignore=\u7D9A\u884C
-dialog.binderror.option.text=\u6307\u5B9A\u30DD\u30FC\u30C8\u306B\u30D0\u30A4\u30F3\u30C9\u3059\u308B\u3053\u3068\u304C\u3067\u304D\u307E\u305B\u3093\uFF01\nPowerFolder \u304C\u5185\u65B9\u5411\u306E\u63A5\u7D9A\u3092\u53D7\u4FE1\u3059\u308B\u306B\u306F\n\u30D0\u30A4\u30F3\u30C9\u3055\u308C\u305F\u30DD\u30FC\u30C8\u304C1\u3064\u4EE5\u4E0A\u5FC5\u8981\u3067\u3059\u3002
-dialog.binderror.option.title=\u30DD\u30FC\u30C8\u306E\u30D0\u30A4\u30F3\u30C7\u30A3\u30F3\u30B0\u306B\u30A8\u30E9\u30FC\uFF01
+dialog.add_member_to_friend_list.button.add=\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0
+dialog.add_member_to_friend_list.explain=\u30B3\u30F3\u30C6\u30AD\u30B9\u30C8\u30E1\u30CB\u30E5\u30FC\uFF08\u30DE\u30A6\u30B9\u53F3\u30AF\u30EA\u30C3\u30AF\uFF09\u3092\u4F7F\u7528\u3057\u3066\u3001\u7C21\u5358\u306B\u53CB\u4EBA\u306E\u30B9\u30C6\u30FC\u30BF\u30B9\u306E\u5909\u66F4\u304C\u3067\u304D\u307E\u3059\u3002
+dialog.add_member_to_friend_list.messageTitle={0} \u3055\u3093\u304B\u3089\u30E1\u30C3\u30BB\u30FC\u30B8
+dialog.add_member_to_friend_list.question={0} \u3055\u3093\u304C1\u3064\u307E\u305F\u306F\u305D\u308C\u4EE5\u4E0A\u306E\u30D1\u30EF\u30FC\u30D5\u30A9\u30EB\u30C0\u306B\u53C2\u52A0\:\n\n{1}\n\u3053\u306E\u30E6\u30FC\u30B6\u30FC\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0\u3059\u308B\u3053\u3068\u3082\u53EF\u80FD\u3067\u3059\u3002
+dialog.add_member_to_friend_list.question2={0} \u3055\u3093\u304C\u3042\u306A\u305F\u3092\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0\u3057\u307E\u3057\u305F\u3002\n\n\u3053\u306E\u30E6\u30FC\u30B6\u30FC\u3092\u3042\u306A\u305F\u306E\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B\u8FFD\u52A0\u3059\u308B\u3053\u3068\u3082\u53EF\u80FD\u3067\u3059\u3002
+dialog.add_member_to_friend_list.title=\u53CB\u4EBA\u30EA\u30B9\u30C8\u306B {0} \u3055\u3093\u3092\u8FFD\u52A0
+dialog.already_running.exit_button=\u7D42\u4E86
+dialog.already_running.start_button=\u8D77\u52D5\u7D9A\u884C
+dialog.already_running.title=\u3059\u3067\u306B\u7A3C\u50CD\u4E2D
+dialog.already_running.warning=PowerFolder \u306F\u3059\u3067\u306B\u7A3C\u52D5\u3057\u3066\u3044\u307E\u3059\u3002\n\n\u30D2\u30F3\u30C8\:  PowerFolder \u306E\u518D\u8D77\u52D5\u3092\u884C\u3063\u3066\u3044\u305F\u5834\u5408\u306F\u3001\njavaw/java \u30D7\u30ED\u30BB\u30B9\u3092\u3059\u3079\u3066\u505C\u6B62\u3057\u3066\u304B\u3089\u3001\u3082\u3046\u4E00\u5EA6\u8A66\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+dialog.bind_error=\u30DD\u30FC\u30C8\u3078\u306E\u30D0\u30A4\u30F3\u30C9\u4E0D\u53EF\uFF01
+dialog.bind_error.option.exit=PowerFolder \u3092\u7D42\u4E86
+dialog.bind_error.option.ignore=\u7D9A\u884C
+dialog.bind_error.option.text=\u6307\u5B9A\u30DD\u30FC\u30C8\u306B\u30D0\u30A4\u30F3\u30C9\u3059\u308B\u3053\u3068\u304C\u3067\u304D\u307E\u305B\u3093\uFF01\nPowerFolder \u304C\u5185\u65B9\u5411\u306E\u63A5\u7D9A\u3092\u53D7\u4FE1\u3059\u308B\u306B\u306F\n\u30D0\u30A4\u30F3\u30C9\u3055\u308C\u305F\u30DD\u30FC\u30C8\u304C1\u3064\u4EE5\u4E0A\u5FC5\u8981\u3067\u3059\u3002
+dialog.bind_error.option.title=\u30DD\u30FC\u30C8\u306E\u30D0\u30A4\u30F3\u30C7\u30A3\u30F3\u30B0\u306B\u30A8\u30E9\u30FC\uFF01
 dialog.connect.connecting=\u63A5\u7D9A\u8A66\u884C\u4E2D
 dialog.connect.connecting_to={0} \u306B\u63A5\u7D9A\u3092\u8A66\u307F\u3066\u3044\u307E\u3059...
 dialog.connection_problem=\u63A5\u7D9A\u306B\u554F\u984C
@@ -189,16 +189,16 @@ dialog.create_edit_profile.title_edit=\u30AB\u30B9\u30BF\u30E0\u306E\u8EE2\u9001
 dialog.create_edit_profile.weekdays=\u5E73\u65E5
 dialog.create_edit_profile.weekends=\u9031\u672B
 dialog.delete_profile.title=\u30AB\u30B9\u30BF\u30E0\u306E\u8EE2\u9001\u30E2\u30FC\u30C9\u306E\u524A\u9664
-dialog.directorychooser.new.description=\u65B0\u3057\u3044\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA
-dialog.directorychooser.new.exists={0}\n\u306F\u3059\u3067\u306B\u5B58\u5728
-dialog.directorychooser.new.key=N
-dialog.directorychooser.new.name=\u65B0\u898F(N)
-dialog.directorychooser.new.problem={0}\n\u306E\u4F5C\u6210\u306B\u554F\u984C\u767A\u751F
-dialog.directorychooser.text=\u4E0B\u306E\u30EA\u30B9\u30C8\u304B\u3089\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\uFF11\u3064\u9078\u629E\u3057\u3066 'OK' \u3092\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u304F\u3060\u3055\u3044\u3002\n\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u5C55\u958B\u3059\u308B\u306B\u306F\u3001\u4E09\u89D2\u5370\u3092\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-dialog.directorychooser.title=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u306E\u9078\u629E
-dialog.fatalerror.title=\u81F4\u547D\u7684\u306A\u30A8\u30E9\u30FC
-dialog.newdirectorycreator.text={0}\n\u306E\u65B0\u3057\u3044\u30B5\u30D6\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u306E\u540D\u524D\u3092\u5165\u529B
-dialog.newdirectorycreator.title=\u65B0\u3057\u3044\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA
+dialog.directory_chooser.new.description=\u65B0\u3057\u3044\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA
+dialog.directory_chooser.new.exists={0}\n\u306F\u3059\u3067\u306B\u5B58\u5728
+dialog.directory_chooser.new.key=N
+dialog.directory_chooser.new.name=\u65B0\u898F(N)
+dialog.directory_chooser.new.problem={0}\n\u306E\u4F5C\u6210\u306B\u554F\u984C\u767A\u751F
+dialog.directory_chooser.text=\u4E0B\u306E\u30EA\u30B9\u30C8\u304B\u3089\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\uFF11\u3064\u9078\u629E\u3057\u3066 'OK' \u3092\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u304F\u3060\u3055\u3044\u3002\n\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u3092\u5C55\u958B\u3059\u308B\u306B\u306F\u3001\u4E09\u89D2\u5370\u3092\u30AF\u30EA\u30C3\u30AF\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+dialog.directory_chooser.title=\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u306E\u9078\u629E
+dialog.fatal_error.title=\u81F4\u547D\u7684\u306A\u30A8\u30E9\u30FC
+dialog.new_directory_creator.text={0}\n\u306E\u65B0\u3057\u3044\u30B5\u30D6\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u306E\u540D\u524D\u3092\u5165\u529B
+dialog.new_directory_creator.title=\u65B0\u3057\u3044\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA
 dialog.synchronization.choose=\u540C\u671F\u52D5\u4F5C\u306E\u9078\u629E \u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\uFF1A
 dialog.synchronization.duplicate.delete=\u3053\u306E\u30D7\u30ED\u30D5\u30A1\u30A4\u30EB\u306E\u524A\u9664\u306F\u3053\u308C\u3089\u3059\u3079\u3066\u306E\u30D5\u30A9\u30EB\u30C0\u306B\u5F71\u97FF\u3057\u307E\u3059\u3002
 dialog.synchronization.duplicate.edit=\u3053\u306E\u30D7\u30ED\u30D5\u30A1\u30A4\u30EB\u306E\u7DE8\u96C6\u306F\u3053\u308C\u3089\u3059\u3079\u3066\u306E\u30D5\u30A9\u30EB\u30C0\u306B\u5F71\u97FF\u3057\u307E\u3059\u3002
@@ -212,34 +212,34 @@ dialog.synchronization.title=\u30DE\u30CB\u30E5\u30A2\u30EB\u540C\u671F
 dialog.unable_to_connect_to_address={0} \u306B\u63A5\u7D9A\u3067\u304D\u307E\u305B\u3093\u3002
 dialog.unable_to_connect_to_member={0} \u306B\u63A5\u7D9A\u3067\u304D\u307E\u305B\u3093\u3002
 dialog.unable_to_open_port=\u30ED\u30FC\u30AB\u30EB\u30DD\u30FC\u30C8 {0} \u3092\u958B\u304F\u3053\u3068\u304C\u3067\u304D\u307E\u305B\u3093\u3002PowerFolder \u304C\u3059\u3067\u306B\u7A3C\u50CD\u4E2D\u306E\u53EF\u80FD\u6027\u304C\u3042\u308A\u307E\u3059\u3002
-dialog.updatecheck.developmentversion.optionrestart=\u518D\u8D77\u52D5
-dialog.updatecheck.downloadAndUpdate=\u76F4\u3061\u306B\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u3057\u3066\u66F4\u65B0
-dialog.updatecheck.failed.text=\u66F4\u65B0\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002\u30A4\u30F3\u30BF\u30FC\u30CD\u30C3\u30C8\u306E\u63A5\u7D9A\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002\n \nPowerFolder Pro\: \u8A2D\u5B9A\uFF0FPro \u8A2D\u5B9A\uFF0FPowerFolder Pro \u30ED\u30FC\u30C0 \u306E\u9805\u76EE\u306B\u3042\u308B\n\u66F4\u65B0\u30B5\u30FC\u30D3\u30B9 \u30A2\u30AB\u30A6\u30F3\u30C8\u3082\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002
-dialog.updatecheck.failed.title=\u66F4\u65B0\u5931\u6557
-dialog.updatecheck.gotoHomepage=PowerFolder \u306E\u30DB\u30FC\u30E0\u30DA\u30FC\u30B8\u3092\u8A2A\u554F
-dialog.updatecheck.noUpdateAvailable=\u3053\u306E\u30D0\u30FC\u30B8\u30E7\u30F3\u306F\u6700\u65B0\u3067\u3059\u3002
-dialog.updatecheck.nothingNeverAsk=\u4ECA\u56DE\u306F\u4F55\u3082\u305B\u305A\u518D\u8CEA\u554F\u3082\u6B62\u3081\u308B
-dialog.updatecheck.text=PowerFolder \u306E\u66F4\u65B0\u7248\u304C\u5165\u624B\u53EF\u80FD\u3067\u3059\u3002 \n\n\u672C\u7248\: v{0}\n\u66F4\u65B0\u7248\: v{1}\uFF08\u6700\u65B0\uFF09\n
-dialog.updatecheck.title=\u66F4\u65B0\u7248\u5165\u624B\u53EF\u80FD
+dialog.update_check.development_version.option_restart=\u518D\u8D77\u52D5
+dialog.update_check.downloadAndUpdate=\u76F4\u3061\u306B\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u3057\u3066\u66F4\u65B0
+dialog.update_check.failed.text=\u66F4\u65B0\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002\u30A4\u30F3\u30BF\u30FC\u30CD\u30C3\u30C8\u306E\u63A5\u7D9A\u3092\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002\n \nPowerFolder Pro\: \u8A2D\u5B9A\uFF0FPro \u8A2D\u5B9A\uFF0FPowerFolder Pro \u30ED\u30FC\u30C0 \u306E\u9805\u76EE\u306B\u3042\u308B\n\u66F4\u65B0\u30B5\u30FC\u30D3\u30B9 \u30A2\u30AB\u30A6\u30F3\u30C8\u3082\u78BA\u8A8D\u3057\u3066\u304F\u3060\u3055\u3044\u3002
+dialog.update_check.failed.title=\u66F4\u65B0\u5931\u6557
+dialog.update_check.gotoHomepage=PowerFolder \u306E\u30DB\u30FC\u30E0\u30DA\u30FC\u30B8\u3092\u8A2A\u554F
+dialog.update_check.noUpdateAvailable=\u3053\u306E\u30D0\u30FC\u30B8\u30E7\u30F3\u306F\u6700\u65B0\u3067\u3059\u3002
+dialog.update_check.nothingNeverAsk=\u4ECA\u56DE\u306F\u4F55\u3082\u305B\u305A\u518D\u8CEA\u554F\u3082\u6B62\u3081\u308B
+dialog.update_check.text=PowerFolder \u306E\u66F4\u65B0\u7248\u304C\u5165\u624B\u53EF\u80FD\u3067\u3059\u3002 \n\n\u672C\u7248\: v{0}\n\u66F4\u65B0\u7248\: v{1}\uFF08\u6700\u65B0\uFF09\n
+dialog.update_check.title=\u66F4\u65B0\u7248\u5165\u624B\u53EF\u80FD
 ##dialog.user_select.online_only=
 dialog.user_select.text=\u62DB\u5F85\u3059\u308B\u30E6\u30FC\u30B6\u30FC\u3092\u9078\u629E\u3057\u307E\u3059\u3002\u8907\u6570\u306E\u30E6\u30FC\u30B6\u30FC\u3092\u9078\u629E\u3059\u308B\u306B\u306F Ctrl \u30AD\u30FC\u3092\u62BC\u3057\u306A\u304C\u3089\u9078\u629E\u3057\u3066\u304F\u3060\u3055\u3044\u3002
 dialog.user_select.title=\u30E6\u30FC\u30B6\u30FC\u9078\u629E
 
-disablesilentmode.description=\u30B5\u30A4\u30EC\u30F3\u30C8\u30E2\u30FC\u30C9\u304C\u73FE\u5728\u6709\u52B9\u3001\u5909\u66F4\u3084\u8FFD\u52A0\u3055\u308C\u305F\u30D5\u30A1\u30A4\u30EB\u306E\u691C\u51FA\u306F\u4F11\u6B62\u3001\u3053\u306E\u30DC\u30BF\u30F3\u3092\u62BC\u3059\u3068\u30D5\u30EB\u30E2\u30FC\u30C9\u306B\u5FA9\u5E30
-disablesilentmode.key=W
-disablesilentmode.name=\u5FA9\u5E30\uFF01(W)
+disable_silent_mode.description=\u30B5\u30A4\u30EC\u30F3\u30C8\u30E2\u30FC\u30C9\u304C\u73FE\u5728\u6709\u52B9\u3001\u5909\u66F4\u3084\u8FFD\u52A0\u3055\u308C\u305F\u30D5\u30A1\u30A4\u30EB\u306E\u691C\u51FA\u306F\u4F11\u6B62\u3001\u3053\u306E\u30DC\u30BF\u30F3\u3092\u62BC\u3059\u3068\u30D5\u30EB\u30E2\u30FC\u30C9\u306B\u5FA9\u5E30
+disable_silent_mode.key=W
+disable_silent_mode.name=\u5FA9\u5E30\uFF01(W)
 
 download_panel.auto_cleanup.description=\u3059\u3079\u3066\u306E\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u3092\u5B8C\u4E86\u6642\u306B\u6D88\u53BB
 download_panel.auto_cleanup.name=\u81EA\u52D5\u6D88\u53BB
 
-downloadfile.description=\u9078\u629E\u30D5\u30A1\u30A4\u30EB\uFF08\u307E\u305F\u306F\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u5185\u306E\u30D5\u30A1\u30A4\u30EB\uFF09\u3092\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u3001\u524A\u9664\u6E08\u307F\u30D5\u30A1\u30A4\u30EB\u306E\u5834\u5408\u306F\u518D\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9
-downloadfile.failed.sourcenotfound=\u30D5\u30A1\u30A4\u30EB {0} \u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u4E0D\u53EF\u3001\u30BD\u30FC\u30B9\u672A\u691C\u51FA\u3002
-downloadfile.key=D
-downloadfile.name=\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9(D)
-downloadfile.unable_to_download=\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u4E0D\u53EF
+download_file.description=\u9078\u629E\u30D5\u30A1\u30A4\u30EB\uFF08\u307E\u305F\u306F\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u5185\u306E\u30D5\u30A1\u30A4\u30EB\uFF09\u3092\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u3001\u524A\u9664\u6E08\u307F\u30D5\u30A1\u30A4\u30EB\u306E\u5834\u5408\u306F\u518D\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9
+download_file.failed.source_not_found=\u30D5\u30A1\u30A4\u30EB {0} \u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u4E0D\u53EF\u3001\u30BD\u30FC\u30B9\u672A\u691C\u51FA\u3002
+download_file.key=D
+download_file.name=\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9(D)
+download_file.unable_to_download=\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u4E0D\u53EF
 
-downloads_panel.cleanup_activity.description=\u53E4\u3044\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u3092\u6D88\u53BB\u4E2D
-downloads_panel.cleanup_activity.title=\u6D88\u53BB\u4E2D
+downloads_panel.clean_up_activity.description=\u53E4\u3044\u30C0\u30A6\u30F3\u30ED\u30FC\u30C9\u3092\u6D88\u53BB\u4E2D
+downloads_panel.clean_up_activity.title=\u6D88\u53BB\u4E2D
 
 empty_recycle_bin.description=PowerFolder \u3054\u307F\u7BB1 \u3092\u7A7A\u3059\u308B
 empty_recycle_bin.key=E
@@ -252,9 +252,9 @@ empty_recycle_bin_confimation.empty=\u7A7A\u306B\u3059\u308B
 empty_recycle_bin_confimation.text=PowerFolder \u3054\u307F\u7BB1\u3092\u7A7A\u306B\u3057\u307E\u3059\u3002
 empty_recycle_bin_confimation.title=PowerFolder \u3054\u307F\u7BB1 \u3092\u7A7A\u306B\u3059\u308B
 
-enablesilentmode.description=\u30D5\u30A9\u30EB\u30C0\u5185\u306E\u5909\u66F4\u306E\u691C\u51FA\u306A\u3069\u9AD8\u8CA0\u8377\u30BF\u30B9\u30AF\u3092\u7121\u52B9\u5316\u3001\u30C7\u30A3\u30B9\u30AF\u4F7F\u7528\u6D3B\u52D5\u306E\u4F11\u6B62
-enablesilentmode.key=S
-enablesilentmode.name=\u30B5\u30A4\u30EC\u30F3\u30C8(S)
+enable_silent_mode.description=\u30D5\u30A9\u30EB\u30C0\u5185\u306E\u5909\u66F4\u306E\u691C\u51FA\u306A\u3069\u9AD8\u8CA0\u8377\u30BF\u30B9\u30AF\u3092\u7121\u52B9\u5316\u3001\u30C7\u30A3\u30B9\u30AF\u4F7F\u7528\u6D3B\u52D5\u306E\u4F11\u6B62
+enable_silent_mode.key=S
+enable_silent_mode.name=\u30B5\u30A4\u30EC\u30F3\u30C8(S)
 
 estimation.unknown=\u4E0D\u660E
 
