--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -133,30 +133,30 @@ delete_confimation.busy.title=Verwijderen van bestand(en)
 delete_confimation.text=Weet u zeker dat u het/de volgende bestand(en) wilt verwijderen\:\n\n{0}\nLet op\: deze bestanden worden werkelijk van uw computer verwijderd en niet in uw Prullenbak geplaatst
 delete_confimation.text_delete=Weet u zeker dat u de volgende bestanden permanent wilt verwijderen?
 delete_confimation.text_delete_directory=Weet u zeker dat u de volgende bestanden en folders (inclusief sub-folders and bestanden) permanent wilt verwijderen?
-delete_confimation.text_movetorecyclebin=Weet u zeker dat u de  volgende bestanden naar de PowerFolder prullenbak wilt verplaatsen?
-delete_confimation.text_movetorecyclebin_DIR=<DIR>
-delete_confimation.text_movetorecyclebin_directory=Weet u zeker dat u de volgende bestanden en of mappen (inclusief submappen en bestanden) naar\nde PowerFolder prullenbak wilt verplaatsen?
+delete_confimation.text_move_to_recycle_bin=Weet u zeker dat u de  volgende bestanden naar de PowerFolder prullenbak wilt verplaatsen?
+delete_confimation.text_move_to_recycle_bin_DIR=<DIR>
+delete_confimation.text_move_to_recycle_bin_directory=Weet u zeker dat u de volgende bestanden en of mappen (inclusief submappen en bestanden) naar\nde PowerFolder prullenbak wilt verplaatsen?
 delete_confimation.title=Verwijder bestanden?
 
-deletefile.description=Verwijder geselecteerde bestand(en)
-deletefile.key=V
-deletefile.name=Verwijder bestand(en)
+delete_file.description=Verwijder geselecteerde bestand(en)
+delete_file.key=V
+delete_file.name=Verwijder bestand(en)
 
-##dialog.addmembertofriendlist.button.add=Add To Friends
-##dialog.addmembertofriendlist.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
-##dialog.addmembertofriendlist.messageTitle=Message from {0}
-##dialog.addmembertofriendlist.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
-##dialog.addmembertofriendlist.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
-dialog.addmembertofriendlist.title=Voeg {0} toe aan vriendenlijst
-dialog.alreadyrunning.exitbutton=Afsluiten
-dialog.alreadyrunning.startbutton=Start geforceerd
-dialog.alreadyrunning.title=al gestart
-dialog.alreadyrunning.warning=PowerFolder is al gestart\n\nHint\: Als u PowerFolder opnieuw heeft gestart, \nVerwijder alle javaw/java processen en probeer opnieuw
-dialog.binderror=Niet instaat om een port te verbinden\!
-##dialog.binderror.option.exit=Exit PowerFolder
-##dialog.binderror.option.ignore=Continue
-##dialog.binderror.option.text=Unable to bind on specified port(s)\!\nAn bound port is required for PowerFolder to\nreceive incoming connections.
-##dialog.binderror.option.title=Port binding error\!
+##dialog.add_member_to_friend_list.button.add=Add To Friends
+##dialog.add_member_to_friend_list.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
+##dialog.add_member_to_friend_list.messageTitle=Message from {0}
+##dialog.add_member_to_friend_list.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
+##dialog.add_member_to_friend_list.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
+dialog.add_member_to_friend_list.title=Voeg {0} toe aan vriendenlijst
+dialog.already_running.exit_button=Afsluiten
+dialog.already_running.start_button=Start geforceerd
+dialog.already_running.title=al gestart
+dialog.already_running.warning=PowerFolder is al gestart\n\nHint\: Als u PowerFolder opnieuw heeft gestart, \nVerwijder alle javaw/java processen en probeer opnieuw
+dialog.bind_error=Niet instaat om een port te verbinden\!
+##dialog.bind_error.option.exit=Exit PowerFolder
+##dialog.bind_error.option.ignore=Continue
+##dialog.bind_error.option.text=Unable to bind on specified port(s)\!\nAn bound port is required for PowerFolder to\nreceive incoming connections.
+##dialog.bind_error.option.title=Port binding error\!
 dialog.connect.connecting=Verbinden
 dialog.connect.connecting_to=Verbinden met {0}...
 dialog.connection_problem=Verbindingsprobleem
@@ -189,16 +189,16 @@ dialog.connection_problem=Verbindingsprobleem
 ##dialog.create_edit_profile.weekdays=Weekdays
 ##dialog.create_edit_profile.weekends=Weekends
 ##dialog.delete_profile.title=Delete custom transfer mode
-##dialog.directorychooser.new.description=New directory
-##dialog.directorychooser.new.exists={0}\nalready exists
-##dialog.directorychooser.new.key=N
-##dialog.directorychooser.new.name=New
-##dialog.directorychooser.new.problem=There was a problem creating\n{0}
-##dialog.directorychooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
-##dialog.directorychooser.title=Select directory
-dialog.fatalerror.title=Fatale Fout
-##dialog.newdirectorycreator.text=Enter the name of the new subdirectory of\n{0}
-##dialog.newdirectorycreator.title=New directory
+##dialog.directory_chooser.new.description=New directory
+##dialog.directory_chooser.new.exists={0}\nalready exists
+##dialog.directory_chooser.new.key=N
+##dialog.directory_chooser.new.name=New
+##dialog.directory_chooser.new.problem=There was a problem creating\n{0}
+##dialog.directory_chooser.text=Select a directory from the list below, then click 'OK'.\nYou can expand directories by clicking on the anchors.
+##dialog.directory_chooser.title=Select directory
+dialog.fatal_error.title=Fatale Fout
+##dialog.new_directory_creator.text=Enter the name of the new subdirectory of\n{0}
+##dialog.new_directory_creator.title=New directory
 dialog.synchronization.choose=Kies uw sync actie op
 ##dialog.synchronization.duplicate.delete=Deleting this profile will affect all these folders.
 ##dialog.synchronization.duplicate.edit=Editing this profile will affect all these folders.
@@ -212,34 +212,34 @@ dialog.synchronization.sychronizing=Synchronizeren...
 dialog.unable_to_connect_to_address=Kan niet verbinden met {0}
 dialog.unable_to_connect_to_member=Kan niet verbinden met {0}
 dialog.unable_to_open_port=Kan lokale poort {0} niet openen, PowerFolder is misschien al gestart?
-dialog.updatecheck.developmentversion.optionrestart=Opnieuw starten
-dialog.updatecheck.downloadAndUpdate=Download en nu actualiseren?
-dialog.updatecheck.failed.text=Update mislukt. Check uw Internet verbinding.\n \nPowerFolder Pro\: Check aub ook uw update service abbonement onder\nInstellingen/Pro Instellingen/PowerFolder Pro Loader.
-dialog.updatecheck.failed.title=Update mislukt
-dialog.updatecheck.gotoHomepage=Ga naar de PowerFolder Homepage
-dialog.updatecheck.noUpdateAvailable=Deze versie is recent
-dialog.updatecheck.nothingNeverAsk=Niets en vraag niet opnieuw
-dialog.updatecheck.text=Een nieuwe versie van PowerFolder is beschikbaar            \n\nDeze versie\: v{0}\nLaatste versie beschikbaar\: v{1} (nieuwer)\n
-dialog.updatecheck.title=Nieuwe versie beschikbaar
+dialog.update_check.development_version.option_restart=Opnieuw starten
+dialog.update_check.downloadAndUpdate=Download en nu actualiseren?
+dialog.update_check.failed.text=Update mislukt. Check uw Internet verbinding.\n \nPowerFolder Pro\: Check aub ook uw update service abbonement onder\nInstellingen/Pro Instellingen/PowerFolder Pro Loader.
+dialog.update_check.failed.title=Update mislukt
+dialog.update_check.gotoHomepage=Ga naar de PowerFolder Homepage
+dialog.update_check.noUpdateAvailable=Deze versie is recent
+dialog.update_check.nothingNeverAsk=Niets en vraag niet opnieuw
+dialog.update_check.text=Een nieuwe versie van PowerFolder is beschikbaar            \n\nDeze versie\: v{0}\nLaatste versie beschikbaar\: v{1} (nieuwer)\n
+dialog.update_check.title=Nieuwe versie beschikbaar
 ##dialog.user_select.online_only=
 ##dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
 ##dialog.user_select.title=Select Users
 
-disablesilentmode.description=Passieve mode is gekozen, toegevoegde/gewijzigde bestanden worden niet automatisch gevonden. Klik voor actieve mode.
-disablesilentmode.key=w
-disablesilentmode.name=Wakker worden\!
+disable_silent_mode.description=Passieve mode is gekozen, toegevoegde/gewijzigde bestanden worden niet automatisch gevonden. Klik voor actieve mode.
+disable_silent_mode.key=w
+disable_silent_mode.name=Wakker worden\!
 
 ##download_panel.auto_cleanup.description=Cleans up any downloads when they complete
 ##download_panel.auto_cleanup.name=Auto-cleanup
 
-downloadfile.description=Download geselecteerde bestand(en) (of bestanden in een map). Verwijderde bestanden zullen opnieuw worden gedownload
-downloadfile.failed.sourcenotfound=Niet instaat om bestand {0}, te downloaden geen bron gevonden
-downloadfile.key=D
-downloadfile.name=Download bestand(en)
-downloadfile.unable_to_download=Download mislukt
+download_file.description=Download geselecteerde bestand(en) (of bestanden in een map). Verwijderde bestanden zullen opnieuw worden gedownload
+download_file.failed.source_not_found=Niet instaat om bestand {0}, te downloaden geen bron gevonden
+download_file.key=D
+download_file.name=Download bestand(en)
+download_file.unable_to_download=Download mislukt
 
-##downloads_panel.cleanup_activity.description=Cleaning up old downloads
-##downloads_panel.cleanup_activity.title=Cleaning up
+##downloads_panel.clean_up_activity.description=Cleaning up old downloads
+##downloads_panel.clean_up_activity.title=Cleaning up
 
 empty_recycle_bin.description=Maak PowerFolder prullenbalk leeg
 empty_recycle_bin.key=L
@@ -252,9 +252,9 @@ empty_recycle_bin.working.title=Leeg maken van de prullenbak
 ##empty_recycle_bin_confimation.text=PowerFolder Recycle Bin will be emptied.
 empty_recycle_bin_confimation.title=Maak PowerFolder prullenbalk leeg
 
-enablesilentmode.description=Actieve mode is gekozen, Klik om in Passive mode te gaan.\nDit zorgt er voor de alle zware taken (Checken van bestanden) niet uitgevoerd worden.
-enablesilentmode.key=s
-enablesilentmode.name=Slaap
+enable_silent_mode.description=Actieve mode is gekozen, Klik om in Passive mode te gaan.\nDit zorgt er voor de alle zware taken (Checken van bestanden) niet uitgevoerd worden.
+enable_silent_mode.key=s
+enable_silent_mode.name=Slaap
 
 ##estimation.unknown=unknown
 
