--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -123,26 +123,26 @@ delete_confimation.busy.title=Apagando arquivo(s)
 delete_confimation.text=Voc\u00ea tem certeza que quer apagar o(s) seguinte(s) arquivo(s)\:\n (Estes arquivos ser\u00e3o apagados definitivamente do seu sistema sem serem movidas para a "Lixeira").
 delete_confimation.text_delete=Voc\u00ea tem certeza que deseja apagar o(s) seguinte(s) arquivo(s) permanentemente?
 delete_confimation.text_delete_directory=Voc\u00ea tem certeza que deseja apagar o(s) seguinte(s) arquivo(s) e/ou diret\u00f3rios (incluindo subdiret\u00f3rios e respectivos arquivos) permanentemente?
-delete_confimation.text_movetorecyclebin=Voc\u00ea tem certeza que deseja mover o(s) seguinte(s) arquivo(s) para a Lixeira do PowerFolder?
-delete_confimation.text_movetorecyclebin_DIR=<DIR>
-delete_confimation.text_movetorecyclebin_directory=Voc\u00ea tem certeza que deseja mover o(s) seguinte(s) arquivo(s) e/ou diret\u00f3rios (incluindo subdirectories e arquivos) para\na Lixeira do PowerFolder?
+delete_confimation.text_move_to_recycle_bin=Voc\u00ea tem certeza que deseja mover o(s) seguinte(s) arquivo(s) para a Lixeira do PowerFolder?
+delete_confimation.text_move_to_recycle_bin_DIR=<DIR>
+delete_confimation.text_move_to_recycle_bin_directory=Voc\u00ea tem certeza que deseja mover o(s) seguinte(s) arquivo(s) e/ou diret\u00f3rios (incluindo subdirectories e arquivos) para\na Lixeira do PowerFolder?
 delete_confimation.title=Apagar arquivos?
 
-deletefile.description=Apagar arquivo(s) selecionados
-deletefile.key=A
-deletefile.name=Apagar Arquivo(s)
+delete_file.description=Apagar arquivo(s) selecionados
+delete_file.key=A
+delete_file.name=Apagar Arquivo(s)
 
-dialog.addmembertofriendlist.button.add=Adicionar em Amigos
-dialog.addmembertofriendlist.explain=Voc\u00ea pode mudar o estado de um amigo\nfacilmente usando os menus de contexto (bot\u00e3o-direito do mouse).
-dialog.addmembertofriendlist.messageTitle=Mensagem de {0}
-dialog.addmembertofriendlist.question={0} associou-se a uma ou mais pastas PowerFolders\:\n\n{1}\nVoc\u00ea talvez queira adicion\u00e1-lo a sua lista de amigos.
-dialog.addmembertofriendlist.question2={0} te adicionou na lista de amigos.\n\nVoc\u00ea talvez queira adicion\u00e1-lo na sua lista de amigos.
-dialog.addmembertofriendlist.title=Adicionar {0} na lista de amigos
-dialog.alreadyrunning.exitbutton=Sair
-dialog.alreadyrunning.startbutton=Iniciar mesmo assim
-dialog.alreadyrunning.title=J\u00e1 em execu\u00e7\u00e3o
-dialog.alreadyrunning.warning=PowerFolder j\u00e1 est\u00e1 em execu\u00e7\u00e3o\n\nDica\: Se voc\u00ea reiniciou o PowerFolder, \ntermine todos os processos javaw/java e tente novamente
-dialog.binderror=Incapaz de designar porta\!
+dialog.add_member_to_friend_list.button.add=Adicionar em Amigos
+dialog.add_member_to_friend_list.explain=Voc\u00ea pode mudar o estado de um amigo\nfacilmente usando os menus de contexto (bot\u00e3o-direito do mouse).
+dialog.add_member_to_friend_list.messageTitle=Mensagem de {0}
+dialog.add_member_to_friend_list.question={0} associou-se a uma ou mais pastas PowerFolders\:\n\n{1}\nVoc\u00ea talvez queira adicion\u00e1-lo a sua lista de amigos.
+dialog.add_member_to_friend_list.question2={0} te adicionou na lista de amigos.\n\nVoc\u00ea talvez queira adicion\u00e1-lo na sua lista de amigos.
+dialog.add_member_to_friend_list.title=Adicionar {0} na lista de amigos
+dialog.already_running.exit_button=Sair
+dialog.already_running.start_button=Iniciar mesmo assim
+dialog.already_running.title=J\u00e1 em execu\u00e7\u00e3o
+dialog.already_running.warning=PowerFolder j\u00e1 est\u00e1 em execu\u00e7\u00e3o\n\nDica\: Se voc\u00ea reiniciou o PowerFolder, \ntermine todos os processos javaw/java e tente novamente
+dialog.bind_error=Incapaz de designar porta\!
 dialog.connect.connecting=Conectando
 dialog.connect.connecting_to=Conectando-se a {0}...
 dialog.connection_problem=Problema na conex\u00e3o
@@ -161,16 +161,16 @@ dialog.customsync.timebetweenscans=(M\u00e1ximo) periodo at\u00e9 detec\u00e7\u0
 dialog.customsync.title=Escolha perfil de sincroniza\u00e7\u00e3o
 dialog.customsync.weekdays=Dias de semana
 dialog.customsync.weekends=Finais de semana
-dialog.directorychooser.new.description=Novo diret\u00f3rio
-dialog.directorychooser.new.exists={0}\nJ\u00e1 existe
-dialog.directorychooser.new.key=N
-dialog.directorychooser.new.name=Novo
-dialog.directorychooser.new.problem=Ocorreu um problema criando\n{0}
-dialog.directorychooser.text=Selecione um diret\u00f3rio da lista abaixo, e click 'OK'.\nVoc\u00ea pode expandir diret\u00f3rios clicando no sinal de mais.
-dialog.directorychooser.title=Selecionar diret\u00f3rio
-dialog.fatalerror.title=Erro fatal
-dialog.newdirectorycreator.text=Digite o nome do novo subdiret\u00f3rio de\n{0}
-dialog.newdirectorycreator.title=Novo diret\u00f3rio
+dialog.directory_chooser.new.description=Novo diret\u00f3rio
+dialog.directory_chooser.new.exists={0}\nJ\u00e1 existe
+dialog.directory_chooser.new.key=N
+dialog.directory_chooser.new.name=Novo
+dialog.directory_chooser.new.problem=Ocorreu um problema criando\n{0}
+dialog.directory_chooser.text=Selecione um diret\u00f3rio da lista abaixo, e click 'OK'.\nVoc\u00ea pode expandir diret\u00f3rios clicando no sinal de mais.
+dialog.directory_chooser.title=Selecionar diret\u00f3rio
+dialog.fatal_error.title=Erro fatal
+dialog.new_directory_creator.text=Digite o nome do novo subdiret\u00f3rio de\n{0}
+dialog.new_directory_creator.title=Novo diret\u00f3rio
 dialog.synchronization.choose=Por favor escolha um tipo de sincroniza\u00e7\u00e3o
 dialog.synchronization.receive_changes=Receber mudan\u00e7as
 dialog.synchronization.send_and_receive_changes=Publicar e receber mudan\u00e7as
@@ -180,31 +180,31 @@ dialog.synchronization.title=Sincroniza\u00e7\u00e3o de Projeto
 dialog.unable_to_connect_to_address=N\u00e3o \u00e9 poss\u00edvel conectar-se a {0}
 dialog.unable_to_connect_to_member=N\u00e3o \u00e9 poss\u00edvel conectar-se a {0}
 dialog.unable_to_open_port=N\u00e3o \u00e9 poss\u00edvel abrir a porta local {0}, PowerFolder talvez j\u00e1 esteja em execu\u00e7\u00e3o
-dialog.updatecheck.developmentversion.optionrestart=Reiniciar
-dialog.updatecheck.downloadAndUpdate=Baixar e Atualizar agora
-dialog.updatecheck.failed.text=Falha na Atualiza\u00e7\u00e3o. Por favor verifique sua conex\u00e3o com a Internet.\n \nPowerFolder Pro\: Por favor verifique sua conta de atualiza\u00e7\u00e3o em\nConfigura\u00e7\u00f5es/Configura\u00e7\u00f5es do Pro/Carregador do PowerFolder.
-dialog.updatecheck.failed.title=Falha na Atualiza\u00e7\u00e3o
-dialog.updatecheck.gotoHomepage=Ir para a HomePage do PowerFolder
-dialog.updatecheck.noUpdateAvailable=Esta \u00e9 a vers\u00e3o mais recente
-dialog.updatecheck.nothingNeverAsk=Nada e n\u00e3o pergunte de novo
-dialog.updatecheck.text=PowerFolder tem uma nova vers\u00e3o dispon\u00edvel            \n\nEsta vers\u00e3o\: v{0}\nUltima dispon\u00edvel\: v{1} (mais recente)\n
-dialog.updatecheck.title=Dispon\u00edvel vers\u00e3o mais recente
+dialog.update_check.development_version.option_restart=Reiniciar
+dialog.update_check.downloadAndUpdate=Baixar e Atualizar agora
+dialog.update_check.failed.text=Falha na Atualiza\u00e7\u00e3o. Por favor verifique sua conex\u00e3o com a Internet.\n \nPowerFolder Pro\: Por favor verifique sua conta de atualiza\u00e7\u00e3o em\nConfigura\u00e7\u00f5es/Configura\u00e7\u00f5es do Pro/Carregador do PowerFolder.
+dialog.update_check.failed.title=Falha na Atualiza\u00e7\u00e3o
+dialog.update_check.gotoHomepage=Ir para a HomePage do PowerFolder
+dialog.update_check.noUpdateAvailable=Esta \u00e9 a vers\u00e3o mais recente
+dialog.update_check.nothingNeverAsk=Nada e n\u00e3o pergunte de novo
+dialog.update_check.text=PowerFolder tem uma nova vers\u00e3o dispon\u00edvel            \n\nEsta vers\u00e3o\: v{0}\nUltima dispon\u00edvel\: v{1} (mais recente)\n
+dialog.update_check.title=Dispon\u00edvel vers\u00e3o mais recente
 dialog.user_select.online_only=
 dialog.user_select.text=Selecione usu\u00e1rios para convidar. Mantenha a tecla Ctrl pressionada para selecionar v\u00e1rios usu\u00e1rios ao mesmo tempo.
 dialog.user_select.title=Selecionar Usu\u00e1rios
 
-disablesilentmode.description=Modo silecioso est\u00e1 ativo, arquivos adicionados/modificados n\u00e3o ser\u00e3o encontrados. Pressione para modo completo
-disablesilentmode.key=a
-disablesilentmode.name=Acordar\!
+disable_silent_mode.description=Modo silecioso est\u00e1 ativo, arquivos adicionados/modificados n\u00e3o ser\u00e3o encontrados. Pressione para modo completo
+disable_silent_mode.key=a
+disable_silent_mode.name=Acordar\!
 
 download_panel.auto_cleanup.description=Limpa as baixas que terminarem
 download_panel.auto_cleanup.name=Limpeza autom\u00e1tica
 
-downloadfile.description=Baixar arquivo(s) seleciona(s) (ou arquivos em diret\u00f3rios). Arquivos apagados ser\u00e3o baixados novamente
-downloadfile.failed.sourcenotfound=Baixa do arquivo {0} n\u00e3o foi poss\u00edvel, origem n\u00e3o encontrada
-downloadfile.key=B
-downloadfile.name=Baixar Arquivo(s)
-downloadfile.unable_to_download=N\u00e3o \u00e9 poss\u00edvel baixar
+download_file.description=Baixar arquivo(s) seleciona(s) (ou arquivos em diret\u00f3rios). Arquivos apagados ser\u00e3o baixados novamente
+download_file.failed.source_not_found=Baixa do arquivo {0} n\u00e3o foi poss\u00edvel, origem n\u00e3o encontrada
+download_file.key=B
+download_file.name=Baixar Arquivo(s)
+download_file.unable_to_download=N\u00e3o \u00e9 poss\u00edvel baixar
 
 empty_recycle_bin.description=Esvaziar a Lixeira do PowerFolder
 empty_recycle_bin.key=E
@@ -217,9 +217,9 @@ empty_recycle_bin_confimation.empty=Esvaziar
 empty_recycle_bin_confimation.text=Lixeira do PowerFolder ser\u00e1 esvaziada.
 empty_recycle_bin_confimation.title=Esvaziar Lixeira do PowerFolder
 
-enablesilentmode.description=Desabilitar todas as tarefas pesadas. Busca de mudan\u00e7as em pastas por exemplo, de forma a evitar atividades no disco r\u00edgido
-enablesilentmode.key=s
-enablesilentmode.name=Modo Silencioso
+enable_silent_mode.description=Desabilitar todas as tarefas pesadas. Busca de mudan\u00e7as em pastas por exemplo, de forma a evitar atividades no disco r\u00edgido
+enable_silent_mode.key=s
+enable_silent_mode.name=Modo Silencioso
 
 estimation.unknown=desconhecido
 
