--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -133,30 +133,30 @@ delete_confimation.busy.title=\u5220\u9664\u6587\u4ef6
 delete_confimation.text=\u4f60\u786e\u5b9a\u8981\u5220\u9664\u4e0b\u5217\u6587\u4ef6\uff1a\r\n\uff08\u6ce8\u610f\uff1a\u8fd9\u4e9b\u6587\u4ef6\u5c06\u88ab\u5f7b\u5e95\u5220\u9664\uff0c\u800c\u4e0d\u662f\u79fb\u5230\u56de\u6536\u7ad9\u3002\uff09
 delete_confimation.text_delete=\u4f60\u786e\u5b9a\u8981\u6c38\u4e45\u5220\u9664\u4ee5\u4e0b\u6587\u4ef6\u5417\uff1f
 delete_confimation.text_delete_directory=\u4f60\u786e\u5b9a\u8981\u6c38\u4e45\u5220\u9664\u4ee5\u4e0b\u6587\u4ef6\u548c\n\u6216\u6587\u4ef6\u5939\uff08\u5305\u62ec\u5b50\u6587\u4ef6\u5939\u548c\u6587\u4ef6\uff09\u5417\uff1f
-delete_confimation.text_movetorecyclebin=\u4f60\u786e\u5b9a\u8981\u628a\u4e0b\u5217\u6587\u4ef6\u5220\u9664\u5230PowerFolder\u56de\u6536\u7ad9\uff1f
-delete_confimation.text_movetorecyclebin_DIR=<DIR>
-delete_confimation.text_movetorecyclebin_directory=\u4f60\u786e\u5b9a\u8981\u628a\u4e0b\u5217\u6587\u4ef6/\u6587\u4ef6\u5939\uff08\u5305\u62ec\u5b50\u76ee\u5f55\u548c\u6587\u4ef6\uff09\u5220\u9664\u5230PowerFolder\u56de\u6536\u7ad9\uff1f
+delete_confimation.text_move_to_recycle_bin=\u4f60\u786e\u5b9a\u8981\u628a\u4e0b\u5217\u6587\u4ef6\u5220\u9664\u5230PowerFolder\u56de\u6536\u7ad9\uff1f
+delete_confimation.text_move_to_recycle_bin_DIR=<DIR>
+delete_confimation.text_move_to_recycle_bin_directory=\u4f60\u786e\u5b9a\u8981\u628a\u4e0b\u5217\u6587\u4ef6/\u6587\u4ef6\u5939\uff08\u5305\u62ec\u5b50\u76ee\u5f55\u548c\u6587\u4ef6\uff09\u5220\u9664\u5230PowerFolder\u56de\u6536\u7ad9\uff1f
 delete_confimation.title=\u5220\u9664\u6587\u4ef6\uff1f
 
-deletefile.description=\u5220\u9664\u9009\u5b9a\u6587\u4ef6
-deletefile.key=F
-deletefile.name=\u5220\u9664\u6587\u4ef6
+delete_file.description=\u5220\u9664\u9009\u5b9a\u6587\u4ef6
+delete_file.key=F
+delete_file.name=\u5220\u9664\u6587\u4ef6
 
-dialog.addmembertofriendlist.button.add=\u6dfb\u52a0\u5230\u597d\u53cb\u5217\u8868
-dialog.addmembertofriendlist.explain=\u4f60\u53ef\u4ee5\u901a\u8fc7\u53f3\u952e\u83dc\u5355\n\u65b9\u4fbf\u5730\u6539\u53d8\u597d\u53cb\u72b6\u6001
-dialog.addmembertofriendlist.messageTitle=\u6765\u81ea {0} \u7684\u6d88\u606f
-dialog.addmembertofriendlist.question={0} \u52a0\u5165\u4e00\u4e2a\u4ee5\u4e0a\u7684PowerFolders\:\n\n{1}\n\u4f60\u53ef\u80fd\u5e0c\u671b\u6dfb\u52a0\u4ed6\u5230\u4f60\u7684\u597d\u53cb\u5217\u8868\u3002
-dialog.addmembertofriendlist.question2={0} \u5df2\u7ecf\u6dfb\u52a0\u4f60\u5230\u4ed6\u7684\u597d\u53cb\u5217\u8868\u3002\n\n\u4f60\u53ef\u80fd\u5e0c\u671b\u6dfb\u52a0\u4ed6\u5230\u4f60\u7684\u597d\u53cb\u5217\u8868\u3002
-dialog.addmembertofriendlist.title=\u6dfb\u52a0 {0} \u5230\u597d\u53cb\u5217\u8868
-dialog.alreadyrunning.exitbutton=\u9000\u51fa
-dialog.alreadyrunning.startbutton=\u65e0\u8bba\u5982\u4f55\u7ee7\u7eed
-dialog.alreadyrunning.title=\u5df2\u7ecf\u8fd0\u884c
-dialog.alreadyrunning.warning=PowerFolder\u5df2\u7ecf\u8fd0\u884c\r\n\r\n\u63d0\u793a\uff1a\u5982\u679c\u4f60\u60f3\u91cd\u542fPowerFolder\uff0c\r\n\u5173\u95ed\u6240\u6709javaw/java\u8fdb\u7a0b\u5e76\u91cd\u8bd5
-dialog.binderror=\u4e0d\u80fd\u7ed1\u5b9a\u7aef\u53e3\!
-dialog.binderror.option.exit=\u9000\u51faPowerFolder
-dialog.binderror.option.ignore=\u7ee7\u7eed
-dialog.binderror.option.text=\u4e0d\u80fd\u7ed1\u5b9a\u5230\u6307\u5b9a\u7684\u7aef\u53e3\uff01\nPowerFolder\u9700\u8981\u4e00\u4e2a\u7ed1\u5b9a\u7aef\u53e3\u6765\n\u63a5\u6536\u5916\u6765\u7684\u8fde\u63a5\u3002
-dialog.binderror.option.title=\u7aef\u53e3\u7ed1\u5b9a\u9519\u8bef\uff01
+dialog.add_member_to_friend_list.button.add=\u6dfb\u52a0\u5230\u597d\u53cb\u5217\u8868
+dialog.add_member_to_friend_list.explain=\u4f60\u53ef\u4ee5\u901a\u8fc7\u53f3\u952e\u83dc\u5355\n\u65b9\u4fbf\u5730\u6539\u53d8\u597d\u53cb\u72b6\u6001
+dialog.add_member_to_friend_list.messageTitle=\u6765\u81ea {0} \u7684\u6d88\u606f
+dialog.add_member_to_friend_list.question={0} \u52a0\u5165\u4e00\u4e2a\u4ee5\u4e0a\u7684PowerFolders\:\n\n{1}\n\u4f60\u53ef\u80fd\u5e0c\u671b\u6dfb\u52a0\u4ed6\u5230\u4f60\u7684\u597d\u53cb\u5217\u8868\u3002
+dialog.add_member_to_friend_list.question2={0} \u5df2\u7ecf\u6dfb\u52a0\u4f60\u5230\u4ed6\u7684\u597d\u53cb\u5217\u8868\u3002\n\n\u4f60\u53ef\u80fd\u5e0c\u671b\u6dfb\u52a0\u4ed6\u5230\u4f60\u7684\u597d\u53cb\u5217\u8868\u3002
+dialog.add_member_to_friend_list.title=\u6dfb\u52a0 {0} \u5230\u597d\u53cb\u5217\u8868
+dialog.already_running.exit_button=\u9000\u51fa
+dialog.already_running.start_button=\u65e0\u8bba\u5982\u4f55\u7ee7\u7eed
+dialog.already_running.title=\u5df2\u7ecf\u8fd0\u884c
+dialog.already_running.warning=PowerFolder\u5df2\u7ecf\u8fd0\u884c\r\n\r\n\u63d0\u793a\uff1a\u5982\u679c\u4f60\u60f3\u91cd\u542fPowerFolder\uff0c\r\n\u5173\u95ed\u6240\u6709javaw/java\u8fdb\u7a0b\u5e76\u91cd\u8bd5
+dialog.bind_error=\u4e0d\u80fd\u7ed1\u5b9a\u7aef\u53e3\!
+dialog.bind_error.option.exit=\u9000\u51faPowerFolder
+dialog.bind_error.option.ignore=\u7ee7\u7eed
+dialog.bind_error.option.text=\u4e0d\u80fd\u7ed1\u5b9a\u5230\u6307\u5b9a\u7684\u7aef\u53e3\uff01\nPowerFolder\u9700\u8981\u4e00\u4e2a\u7ed1\u5b9a\u7aef\u53e3\u6765\n\u63a5\u6536\u5916\u6765\u7684\u8fde\u63a5\u3002
+dialog.bind_error.option.title=\u7aef\u53e3\u7ed1\u5b9a\u9519\u8bef\uff01
 dialog.connect.connecting=\u8fde\u63a5
 dialog.connect.connecting_to=\u8fde\u63a5\u5230 {0} \u2026\u2026
 dialog.connection_problem=\u8fde\u63a5\u95ee\u9898
@@ -189,16 +189,16 @@ dialog.create_edit_profile.title_edit=\u7f16\u8f91\u81ea\u5b9a\u4e49\u7684\u4f20
 dialog.create_edit_profile.weekdays=\u5de5\u4f5c\u65e5
 dialog.create_edit_profile.weekends=\u5468\u672b
 dialog.delete_profile.title=\u5220\u9664\u81ea\u5b9a\u4e49\u7684\u4f20\u8f93\u6a21\u5f0f
-dialog.directorychooser.new.description=\u65b0\u5efa\u6587\u4ef6\u5939
-dialog.directorychooser.new.exists={0}\n\u5df2\u7ecf\u5b58\u5728
-dialog.directorychooser.new.key=N
-dialog.directorychooser.new.name=\u65b0\u5efa
-dialog.directorychooser.new.problem=\u521b\u5efa\u4ee5\u4e0b\u6587\u4ef6\u65f6\u53d1\u751f\u9519\u8bef\n{0}
-dialog.directorychooser.text=\u9009\u62e9\u4ee5\u4e0b\u5217\u8868\u4e2d\u7684\u6587\u4ef6\u5939\uff0c\u5e76\u70b9\u51fb\u201c\u786e\u5b9a\u201d\u3002\n\u70b9\u51fb\u951a\u70b9\u53ef\u4ee5\u5c55\u5f00\u6587\u4ef6\u5939\u3002
-dialog.directorychooser.title=\u9009\u62e9\u6587\u4ef6\u5939
-dialog.fatalerror.title=\u53d1\u751f\u4e25\u91cd\u9519\u8bef
-dialog.newdirectorycreator.text=\u8f93\u5165\u4ee5\u4e0b\u6587\u4ef6\u5939\u7684\u65b0\u5efa\u5b50\u6587\u4ef6\u5939\u7684\u540d\u79f0\n{0}
-dialog.newdirectorycreator.title=\u65b0\u5efa\u6587\u4ef6\u5939
+dialog.directory_chooser.new.description=\u65b0\u5efa\u6587\u4ef6\u5939
+dialog.directory_chooser.new.exists={0}\n\u5df2\u7ecf\u5b58\u5728
+dialog.directory_chooser.new.key=N
+dialog.directory_chooser.new.name=\u65b0\u5efa
+dialog.directory_chooser.new.problem=\u521b\u5efa\u4ee5\u4e0b\u6587\u4ef6\u65f6\u53d1\u751f\u9519\u8bef\n{0}
+dialog.directory_chooser.text=\u9009\u62e9\u4ee5\u4e0b\u5217\u8868\u4e2d\u7684\u6587\u4ef6\u5939\uff0c\u5e76\u70b9\u51fb\u201c\u786e\u5b9a\u201d\u3002\n\u70b9\u51fb\u951a\u70b9\u53ef\u4ee5\u5c55\u5f00\u6587\u4ef6\u5939\u3002
+dialog.directory_chooser.title=\u9009\u62e9\u6587\u4ef6\u5939
+dialog.fatal_error.title=\u53d1\u751f\u4e25\u91cd\u9519\u8bef
+dialog.new_directory_creator.text=\u8f93\u5165\u4ee5\u4e0b\u6587\u4ef6\u5939\u7684\u65b0\u5efa\u5b50\u6587\u4ef6\u5939\u7684\u540d\u79f0\n{0}
+dialog.new_directory_creator.title=\u65b0\u5efa\u6587\u4ef6\u5939
 dialog.synchronization.choose=\u8bf7\u9009\u62e9\u540c\u6b65\u65f6\u7684\u884c\u4e3a
 dialog.synchronization.duplicate.delete=\u5220\u9664\u8fd9\u4e00\u914d\u7f6e\u5c06\u4f1a\u5f71\u54cd\u6240\u6709\u7684\u6587\u4ef6\u5939
 dialog.synchronization.duplicate.edit=\u7f16\u8f91\u8fd9\u4e00\u914d\u7f6e\u5c06\u4f1a\u5f71\u54cd\u6240\u6709\u7684\u6587\u4ef6\u5939\u3002
@@ -212,34 +212,34 @@ dialog.synchronization.title=\u624b\u52a8\u540c\u6b65
 dialog.unable_to_connect_to_address=\u4e0d\u80fd\u8fde\u63a5\u5230 {0}
 dialog.unable_to_connect_to_member=\u4e0d\u80fd\u8fde\u63a5\u5230 {0}
 dialog.unable_to_open_port=\u4e0d\u80fd\u6253\u5f00\u672c\u5730\u7aef\u53e3 {0} \uff0c\u53ef\u80fdPowerFolder\u5df2\u7ecf\u5728\u8fd0\u884c\u3002
-dialog.updatecheck.developmentversion.optionrestart=\u91cd\u542f
-dialog.updatecheck.downloadAndUpdate=\u7acb\u5373\u4e0b\u8f7d\u5e76\u66f4\u65b0
-dialog.updatecheck.failed.text=\u5347\u7ea7\u5931\u8d25\u3002\u8bf7\u68c0\u67e5\u60a8\u7684\u7f51\u7edc\u8fde\u63a5\u3002\n \nPowerFolder \u4e13\u4e1a\u7248\uff1a\u8bf7\u540c\u65f6\u68c0\u67e5\u60a8\u7684\u5347\u7ea7\u670d\u52a1\u8d26\u53f7\uff0c\u5728\n\u8bbe\u7f6e/\u4e13\u4e1a\u7248\u8bbe\u7f6e/PowerFolder\u4e13\u4e1a\u7248\u52a0\u8f7d\u5668\u3002
-dialog.updatecheck.failed.title=\u5347\u7ea7\u5931\u8d25
-dialog.updatecheck.gotoHomepage=\u8bbf\u95ee PowerFolder \u4e3b\u9875
-dialog.updatecheck.noUpdateAvailable=\u76ee\u524d\u5df2\u7ecf\u662f\u6700\u65b0\u7248\u672c
-dialog.updatecheck.nothingNeverAsk=\u4e0d\u518d\u8be2\u95ee
-dialog.updatecheck.text=\u5df2\u6709\u66f4\u65b0\u7248\u672c\u7684 PowerFolder \n\n\u5f53\u524d\u7248\u672c\uff1a v{0}\n\u6700\u65b0\u7248\u672c\uff1a v{1} \uff08\u66f4\u65b0\uff09\n
-dialog.updatecheck.title=\u5df2\u6709\u66f4\u65b0\u7684\u7248\u672c
+dialog.update_check.development_version.option_restart=\u91cd\u542f
+dialog.update_check.downloadAndUpdate=\u7acb\u5373\u4e0b\u8f7d\u5e76\u66f4\u65b0
+dialog.update_check.failed.text=\u5347\u7ea7\u5931\u8d25\u3002\u8bf7\u68c0\u67e5\u60a8\u7684\u7f51\u7edc\u8fde\u63a5\u3002\n \nPowerFolder \u4e13\u4e1a\u7248\uff1a\u8bf7\u540c\u65f6\u68c0\u67e5\u60a8\u7684\u5347\u7ea7\u670d\u52a1\u8d26\u53f7\uff0c\u5728\n\u8bbe\u7f6e/\u4e13\u4e1a\u7248\u8bbe\u7f6e/PowerFolder\u4e13\u4e1a\u7248\u52a0\u8f7d\u5668\u3002
+dialog.update_check.failed.title=\u5347\u7ea7\u5931\u8d25
+dialog.update_check.gotoHomepage=\u8bbf\u95ee PowerFolder \u4e3b\u9875
+dialog.update_check.noUpdateAvailable=\u76ee\u524d\u5df2\u7ecf\u662f\u6700\u65b0\u7248\u672c
+dialog.update_check.nothingNeverAsk=\u4e0d\u518d\u8be2\u95ee
+dialog.update_check.text=\u5df2\u6709\u66f4\u65b0\u7248\u672c\u7684 PowerFolder \n\n\u5f53\u524d\u7248\u672c\uff1a v{0}\n\u6700\u65b0\u7248\u672c\uff1a v{1} \uff08\u66f4\u65b0\uff09\n
+dialog.update_check.title=\u5df2\u6709\u66f4\u65b0\u7684\u7248\u672c
 dialog.user_select.online_only=
 dialog.user_select.text=\u9009\u62e9\u8981\u53d1\u9001\u9080\u8bf7\u7684\u7528\u6237\u3002\u6309\u4f4fCtrl\u952e\u53ef\u4ee5\u540c\u65f6\u9009\u62e9\u591a\u4e2a\u7528\u6237\u3002
 dialog.user_select.title=\u9009\u62e9\u7528\u6237
 
-disablesilentmode.description=\u6fc0\u6d3b\uff01\u5f53\u524d\u5904\u4e8e\u4f11\u7720\u6a21\u5f0f\uff0c\u589e\u52a0/\u4fee\u6539\u7684\u6587\u4ef6\u5c06\u4e0d\u80fd\u627e\u5230\u3002
-disablesilentmode.key=w
-disablesilentmode.name=\u6fc0\u6d3b\uff01
+disable_silent_mode.description=\u6fc0\u6d3b\uff01\u5f53\u524d\u5904\u4e8e\u4f11\u7720\u6a21\u5f0f\uff0c\u589e\u52a0/\u4fee\u6539\u7684\u6587\u4ef6\u5c06\u4e0d\u80fd\u627e\u5230\u3002
+disable_silent_mode.key=w
+disable_silent_mode.name=\u6fc0\u6d3b\uff01
 
 download_panel.auto_cleanup.description=\u4e0b\u8f7d\u5b8c\u6210\u65f6\u6e05\u9664\u3002
 download_panel.auto_cleanup.name=\u81ea\u52a8\u6e05\u9664
 
-downloadfile.description=\u4e0b\u8f7d\u9009\u5b9a\u7684\u6587\u4ef6\uff08\u6216\u6587\u4ef6\u5939\u7684\u6587\u4ef6\uff09\u3002\u88ab\u5220\u9664\u7684\u6587\u4ef6\u5c06\u91cd\u65b0\u4e0b\u8f7d\u3002
-downloadfile.failed.sourcenotfound=\u4e0d\u80fd\u4e0b\u8f7d\u6587\u4ef6 {0} \uff0c\u6ca1\u6709\u627e\u5230\u6e90
-downloadfile.key=D
-downloadfile.name=\u4e0b\u8f7d\u6587\u4ef6
-downloadfile.unable_to_download=\u4e0d\u80fd\u4e0b\u8f7d
+download_file.description=\u4e0b\u8f7d\u9009\u5b9a\u7684\u6587\u4ef6\uff08\u6216\u6587\u4ef6\u5939\u7684\u6587\u4ef6\uff09\u3002\u88ab\u5220\u9664\u7684\u6587\u4ef6\u5c06\u91cd\u65b0\u4e0b\u8f7d\u3002
+download_file.failed.source_not_found=\u4e0d\u80fd\u4e0b\u8f7d\u6587\u4ef6 {0} \uff0c\u6ca1\u6709\u627e\u5230\u6e90
+download_file.key=D
+download_file.name=\u4e0b\u8f7d\u6587\u4ef6
+download_file.unable_to_download=\u4e0d\u80fd\u4e0b\u8f7d
 
-downloads_panel.cleanup_activity.description=\u6e05\u9664\u65e7\u7684\u4e0b\u8f7d
-downloads_panel.cleanup_activity.title=\u6e05\u9664
+downloads_panel.clean_up_activity.description=\u6e05\u9664\u65e7\u7684\u4e0b\u8f7d
+downloads_panel.clean_up_activity.title=\u6e05\u9664
 
 empty_recycle_bin.description=\u6e05\u7a7aPowerFolder\u56de\u6536\u7ad9
 empty_recycle_bin.key=E
@@ -252,9 +252,9 @@ empty_recycle_bin_confimation.empty=\u6e05\u7a7a
 empty_recycle_bin_confimation.text=PowerFolder\u56de\u6536\u7ad9\u5c06\u88ab\u6e05\u7a7a
 empty_recycle_bin_confimation.title=\u6e05\u7a7aPowerFolder\u56de\u6536\u7ad9
 
-enablesilentmode.description=\u8fdb\u5165\u4f11\u7720\uff0c\u5c06\u505c\u6b62\u626b\u63cf\u6587\u4ef6\u53d8\u5316\u3002
-enablesilentmode.key=s
-enablesilentmode.name=\u8fdb\u5165\u4f11\u7720
+enable_silent_mode.description=\u8fdb\u5165\u4f11\u7720\uff0c\u5c06\u505c\u6b62\u626b\u63cf\u6587\u4ef6\u53d8\u5316\u3002
+enable_silent_mode.key=s
+enable_silent_mode.name=\u8fdb\u5165\u4f11\u7720
 
 estimation.unknown=\u672a\u77e5
 
